--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <head>
   <link rel="shortcut icon" href="/favicon.ico">
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- InstanceBeginEditable name="doctitle" -->
   <title>Beisan Systems</title>
   <!-- InstanceEndEditable -->
