--- a/de/garantie.html
+++ b/de/garantie.html
@@ -2,6 +2,8 @@
 <html xmlns="http://www.w3.org/2022/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
 <title>Untitled Document</title>
 <style type="text/css">
 <!--
