--- a/forum.html
+++ b/forum.html
@@ -3,6 +3,8 @@
 <head>
 <link rel="shortcut icon" href="/favicon.ico">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <!-- InstanceBeginEditable name="doctitle" -->
 <title>Beisan Systems - Testimonials</title>
 <!-- InstanceEndEditable -->
