--- a/procedures/e39_cabin_filter_housing_procedure.htm
+++ b/procedures/e39_cabin_filter_housing_procedure.htm
@@ -1,6 +1,7 @@
 <html xmlns="undefined">
 <head>
 <meta http-equiv=Content-Type content="text/html; charset=windows-1252">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Beisan Systems - Procedures - E39 Cabin Filter Housing Procedure</title>
 <style>
 <!--
@@ -47,7 +48,7 @@ src="e39_cabin_filter_housing_procedure_files/image003.jpg"><br>
     Install vent duct by rotating clockwise from installation position, inserting
     into firewall access, pressing in and turning duct counter clockwise to hook
     onto studs.<br>
-    Note:  For proper insertion, align duct foam boot to mate flush with firewall
+    Note:ï¿½ For proper insertion, align duct foam boot to mate flush with firewall
     opening (angled).<br>
     Note: If mounting is difficult, spray lubricant on firewall rubber boot (water
     based cleaner).</p>
@@ -70,7 +71,7 @@ src="e39_cabin_filter_housing_procedure_files/image005.jpg"><br>
     <br>
     <br>
   </p>
-  <p>© Copyright 2022 Beisan Systems, LLC</p>
+  <p>ï¿½ Copyright 2022 Beisan Systems, LLC</p>
 </div>
 </body>
 </html>
