--- a/procedures/e39_double_cabin_filter_housing_procedure.htm
+++ b/procedures/e39_double_cabin_filter_housing_procedure.htm
@@ -1,6 +1,7 @@
 <html>
 <head>
 <meta http-equiv=Content-Type content="text/html; charset=windows-1252">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Beisan Systems - Procedures - E39 Double Cabin Filter Housing Procedure</title>
 <style>
 <!--
@@ -81,7 +82,7 @@ src="e39_double_cabin_filter_housing_procedure_files/image008.jpg"><br>
     Install duct by rotating clockwise from installation position, inserting into
     firewall access, pressing in and turning duct counter clockwise to hook onto
     studs.<br>
-    Note:  For proper insertion, align duct foam boot to mate flush with firewall
+    Note:ï¿½ For proper insertion, align duct foam boot to mate flush with firewall
     opening (angled).<br>
     Note: If mounting is difficult, spray lubricant on firewall rubber boot (water
     based cleaner).</p>
@@ -111,7 +112,7 @@ src="e39_double_cabin_filter_housing_procedure_files/image011.jpg"><br>
     Install duct by rotating counter clockwise from installation position,
     inserting into firewall access, pressing in and turning duct clockwise to hook
     onto studs.<br>
-    Note:  For proper insertion, align duct foam boot to mate flush with firewall
+    Note:ï¿½ For proper insertion, align duct foam boot to mate flush with firewall
     opening (angled).<br>
     Note: If mounting is difficult, spray lubricant on firewall rubber boot (water
     based cleaner).</p>
@@ -134,7 +135,7 @@ src="e39_double_cabin_filter_housing_procedure_files/image013.jpg"><br>
     <br>
     <br>
   </p>
-  <p>© Copyright 2022 Beisan Systems, LLC<br>
+  <p>ï¿½ Copyright 2022 Beisan Systems, LLC<br>
     <br>
   </p>
 </div>
