--- a/procedures/e39_fan_procedure.htm
+++ b/procedures/e39_fan_procedure.htm
@@ -1,6 +1,7 @@
 <html xmlns="undefined">
 <head>
 <meta http-equiv=Content-Type content="text/html; charset=windows-1252">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Beisan Systems - Procedures - E39 Fan Procedure</title>
 <style>
 <!--
@@ -249,7 +250,7 @@ src="e39_fan_procedure_files/image028.jpg"><br>
     <br>
     <br>
   </p>
-  <p>© Copyright 2009 Beisan Systems, LLC</p>
+  <p>ï¿½ Copyright 2009 Beisan Systems, LLC</p>
 </div>
 </body>
 </html>
