--- a/procedures/e46_m3_cabin_filter_housing_procedure.htm
+++ b/procedures/e46_m3_cabin_filter_housing_procedure.htm
@@ -1,6 +1,7 @@
 <html>
 <head>
 <meta http-equiv=Content-Type content="text/html; charset=windows-1252">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Beisan Systems - Procedures - E46 M3 Cabin Filter Housing Procedure</title>
 <style>
 <!--
@@ -41,7 +42,7 @@ src="e46_m3_cabin_filter_housing_procedure_files/image003.jpg"><br>
     Remove cables from cabin filter housing cable bracket.</p>
   <p><img width=512 height=384
 src="e46_m3_cabin_filter_housing_procedure_files/image004.jpg"><br>
-    Remove cabin filter housing 4 mounting bolts (T30 torx bit socket 1/4” / 1/4”
+    Remove cabin filter housing 4 mounting bolts (T30 torx bit socket 1/4ï¿½ / 1/4ï¿½
     ratchet &amp; extension).</p>
   <p><img width=512 height=384
 src="e46_m3_cabin_filter_housing_procedure_files/image005.jpg"><br>
@@ -61,7 +62,7 @@ src="e46_m3_cabin_filter_housing_procedure_files/image006.jpg"><br>
     and cabin filter housing seal ends onto bulk head seal (picture).</p>
   <p><img width=512 height=384
 src="e46_m3_cabin_filter_housing_procedure_files/image007.jpg"><br>
-    Install cabin filter housing 4 mounting bolts (T30 torx bit socket 1/4” / 1/4”
+    Install cabin filter housing 4 mounting bolts (T30 torx bit socket 1/4ï¿½ / 1/4ï¿½
     ratchet).</p>
   <p><img width=512 height=384
 src="e46_m3_cabin_filter_housing_procedure_files/image008.jpg"><br>
@@ -87,7 +88,7 @@ src="e46_m3_cabin_filter_housing_procedure_files/image011.jpg"><br>
     turning 1/4 turn clockwise.<br>
     <br>
   </p>
-  <p>© Copyright 2022 Beisan Systems, LLC</p>
+  <p>ï¿½ Copyright 2022 Beisan Systems, LLC</p>
 </div>
 </body>
 </html>
