--- a/procedures/e46_mechanical_fan_procedure.htm
+++ b/procedures/e46_mechanical_fan_procedure.htm
@@ -1,6 +1,7 @@
 <html xmlns="undefined">
 <head>
 <meta http-equiv=Content-Type content="text/html; charset=windows-1252">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Beisan Systems - Procedures - E46 Mechanical Fan Procedure</title>
 <style>
 <!--
@@ -50,7 +51,7 @@ src="e46_mechanical_fan_procedure_files/image004.jpg"><br>
   <p><img width=512 height=384
 src="e46_mechanical_fan_procedure_files/image005.jpg"><br>
     Remove fan shroud mounting bolt at top left of fan shroud (T25 torx bit socket
-    1/4&quot; / 1/4” ratchet)</p>
+    1/4&quot; / 1/4ï¿½ ratchet)</p>
   <p><img width=512 height=384
 src="e46_mechanical_fan_procedure_files/image006.jpg"><br>
     Remove rivet at top right corner of fan shroud. Pry out rivet center pin (tack
@@ -145,10 +146,10 @@ src="e46_mechanical_fan_procedure_files/image016.jpg"><br>
   <p><img width=512 height=384
 src="e46_mechanical_fan_procedure_files/image017.jpg"><br>
     Install fan and AUC electrical connectors.<br>
-    Insert each connector until clip “click” sound is heard.<br>
+    Insert each connector until clip ï¿½clickï¿½ sound is heard.<br>
     Insert fan electrical connector cable into fan shroud clip.</p>
   <p><img width=512 height=384
-src="e46_mechanical_fan_procedure_files/image018.jpg"> <br>
+src="e46_mechanical_fan_procedure_files/image018.jpg">ï¿½<br>
     Install air intake duct on top of radiator.<br>
     Insert duct into air filter housing until tabs insert into slots.</p>
   <p><img width=512 height=384
@@ -159,7 +160,7 @@ src="e46_mechanical_fan_procedure_files/image019.jpg"><br>
     <br>
     <br>
   </p>
-  <p>© Copyright 2022 Beisan Systems, LLC</p>
+  <p>ï¿½ Copyright 2022 Beisan Systems, LLC</p>
 </div>
 </body>
 </html>
