--- a/procedures/euro_e36_m3_fan_procedure.htm
+++ b/procedures/euro_e36_m3_fan_procedure.htm
@@ -1,6 +1,7 @@
 <html>
 <head>
 <meta http-equiv=Content-Type content="text/html; charset=windows-1252">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Beisan Systems - Procedures - Euro E36 M3 Fan Procedure</title>
 <style>
 <!--
@@ -164,7 +165,7 @@ src="euro_e36_m3_fan_procedure_files/image024.jpg"><br>
     <br>
     <br>
   </p>
-  <p>© Copyright 2022 Beisan Systems, LLC<br>
+  <p>ï¿½ Copyright 2022 Beisan Systems, LLC<br>
     <br>
   </p>
 </div>
