--- a/procedures/m62tu_engine_air_intake_procedure.htm
+++ b/procedures/m62tu_engine_air_intake_procedure.htm
@@ -1,6 +1,7 @@
 <html>
 <head>
 <meta http-equiv=Content-Type content="text/html; charset=windows-1252">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Beisan Systems - Procedures - M62TU Engine Air Intake Procedure</title>
 <style>
 <!--
@@ -43,12 +44,12 @@ src="m62tu_engine_air_intake_procedure_files/image006.jpg"><br>
     Disconnect MAF electrical cable from clip under intake boot.</p>
   <p><img width=512 height=384
 src="m62tu_engine_air_intake_procedure_files/image007.jpg"><br>
-    Remove air filter box mounting bolt at rear of air filter box (10mm socket 3/8”
-    / 3/8” ratchet &amp; medium extension).</p>
+    Remove air filter box mounting bolt at rear of air filter box (10mm socket 3/8ï¿½
+    / 3/8ï¿½ ratchet &amp; medium extension).</p>
   <p><img width=512 height=384
 src="m62tu_engine_air_intake_procedure_files/image008.jpg"><br>
     Remove intake resonator mounting bolt just to rear of MAF sensor (10mm socket
-    3/8” / 3/8” ratchet &amp; medium extension).<br>
+    3/8ï¿½ / 3/8ï¿½ ratchet &amp; medium extension).<br>
     <br>
     Note: Leave bolt in bracket after unscrewing.</p>
   <p><img width=512 height=384
@@ -109,17 +110,17 @@ src="m62tu_engine_air_intake_procedure_files/image012.jpg"><br>
     ratchet &amp; extension).</p>
   <p><img width=512 height=384
 src="m62tu_engine_air_intake_procedure_files/image017.jpg"><br>
-    Install air filter box mounting bolt at rear of box (10mm socket 3/8” / 3/8”
+    Install air filter box mounting bolt at rear of box (10mm socket 3/8ï¿½ / 3/8ï¿½
     ratchet &amp; medium extension).<br>
     Reposition box to align mounting bracket hole.<br>
-    Fully tighten, 10 Nm (7 Ft-lb) (10mm socket 3/8” / 3/8” torque wrench &amp; medium
+    Fully tighten, 10 Nm (7 Ft-lb) (10mm socket 3/8ï¿½ / 3/8ï¿½ torque wrench &amp; medium
     extension).</p>
   <p><img width=512 height=384
 src="m62tu_engine_air_intake_procedure_files/image018.jpg"><br>
-    Install intake resonator mounting bolt at rear of MAF sensor (10mm socket 3/8”
-    / 3/8” ratchet &amp; medium extension).<br>
+    Install intake resonator mounting bolt at rear of MAF sensor (10mm socket 3/8ï¿½
+    / 3/8ï¿½ ratchet &amp; medium extension).<br>
     Reposition intake duct to align mounting bracket hole.<br>
-    Fully tighten, 10 Nm (7 Ft-lb) (10mm socket 3/8” / 3/8” torque wrench &amp;
+    Fully tighten, 10 Nm (7 Ft-lb) (10mm socket 3/8ï¿½ / 3/8ï¿½ torque wrench &amp;
     medium extension).</p>
   <p><img width=512 height=384
 src="m62tu_engine_air_intake_procedure_files/image019.jpg"><br>
@@ -147,7 +148,7 @@ src="m62tu_engine_air_intake_procedure_files/image024.jpg"><br>
     <br>
     <br>
   </p>
-  <p>© Copyright 2022 Beisan Systems, LLC</p>
+  <p>ï¿½ Copyright 2022 Beisan Systems, LLC</p>
 </div>
 </body>
 </html>
