--- a/procedures/m62tu_fan_procedure.htm
+++ b/procedures/m62tu_fan_procedure.htm
@@ -1,6 +1,7 @@
 <html>
 <head>
 <meta http-equiv=Content-Type content="text/html; charset=windows-1252">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Beisan Systems - Procedures - M62TU Fan Procedure</title>
 <style>
 <!--
@@ -217,7 +218,7 @@ src="m62tu_fan_procedure_files/image030.jpg"><br>
     <br>
     <br>
   </p>
-  <p>© Copyright 2022 Beisan Systems, LLC</p>
+  <p>ï¿½ Copyright 2022 Beisan Systems, LLC</p>
 </div>
 </body>
 </html>
