--- a/procedures/n14_n18_hpfp_procedure.htm
+++ b/procedures/n14_n18_hpfp_procedure.htm
@@ -1,6 +1,7 @@
 <html>
 <head>
 <meta http-equiv=Content-Type content="text/html; charset=windows-1252">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Beisan Systems - Procedures - N14/N18 HPFP Procedure</title>
 <style>
 <!--
@@ -77,7 +78,7 @@ div.WordSection1 {
     high pressure fuel rail.<br>
     <br>
     The N14/N18 HPFP (high pressure fuel pump) experiences one primary failure. The
-    bellows’ upper collar incorporates a small O-ring which separates the fuel
+    bellowsï¿½ upper collar incorporates a small O-ring which separates the fuel
     chamber from the pump hydraulic fluid chamber. This O-ring fails and allows
     fuel to seep into the hydraulic fluid chamber. The hydraulic fluid then becomes
     contaminated and this changes its functional characteristics which causes the
@@ -207,24 +208,24 @@ src="n14_n18_hpfp_procedure_files/image002.jpg"><br>
 src="n14_n18_hpfp_procedure_files/image003.jpg"></p>
   <p>N14/N18 HPFP swashplate shaft socket (BS193) $5/each (www.beisansystems.com)<br>
     <br>
-    Note: Socket is Craftsman 10mm 12 point 1/2” socket (CMMT44232). It is a unique
-    size and other 10mm 12 point sockets don’t work.</p>
+    Note: Socket is Craftsman 10mm 12 point 1/2ï¿½ socket (CMMT44232). It is a unique
+    size and other 10mm 12 point sockets donï¿½t work.</p>
   <p><img border=0 width=512 height=384
 src="n14_n18_hpfp_procedure_files/image004.jpg"><br>
     Soft vise jaw liners (BS091) $15/each (www.beisansystems.com)</p>
   <p><img border=0 width=512 height=384
 src="n14_n18_hpfp_procedure_files/image005.jpg"><br>
-    4” table mounted vise.</p>
+    4ï¿½ table mounted vise.</p>
   <p><img border=0 width=512 height=384
 src="n14_n18_hpfp_procedure_files/image006.jpg"><br>
-    22mm socket 1/2”, 18mm socket 1/2”, 3/8” to 1/2” socket adapter<br>
-    T25 torx bit socket 1/4&quot;, T20 torx bit socket 1/4&quot;, 3/8” to 1/4”
+    22mm socket 1/2ï¿½, 18mm socket 1/2ï¿½, 3/8ï¿½ to 1/2ï¿½ socket adapter<br>
+    T25 torx bit socket 1/4&quot;, T20 torx bit socket 1/4&quot;, 3/8ï¿½ to 1/4ï¿½
     socket adapter<br>
-    3/8” chisel, bent head pick tool (for O-rings removal)<br>
-    1/2” short-arm ratchet, 3/8” short-arm ratchet<br>
-    1” wide adjustable wrench, small medium-nose pliers<br>
+    3/8ï¿½ chisel, bent head pick tool (for O-rings removal)<br>
+    1/2ï¿½ short-arm ratchet, 3/8ï¿½ short-arm ratchet<br>
+    1ï¿½ wide adjustable wrench, small medium-nose pliers<br>
     2 lb handheld sledgehammer<br>
-    3/8” torque wrench (10 Nm [7 ft-lb]), 55 Nm [40.5 ft-lb]) (not shown)</p>
+    3/8ï¿½ torque wrench (10 Nm [7 ft-lb]), 55 Nm [40.5 ft-lb]) (not shown)</p>
   <p><img border=0 width=512 height=384
 src="n14_n18_hpfp_procedure_files/image007.jpg"><br>
     Bar type bearing puller (small) (OTC 4518)</p>
@@ -235,7 +236,7 @@ src="n14_n18_hpfp_procedure_files/image008.jpg"><br>
 src="n14_n18_hpfp_procedure_files/image009.jpg"><br>
     Paper towels, water based cleaner (simple green 10:1), brake cleaner, CHF 11S
     synthetic oil (3 oz)<br>
-    Container (6”x4”x2”), 1 cup pouring receptacle, oil lubricant w/ dropper
+    Container (6ï¿½x4ï¿½x2ï¿½), 1 cup pouring receptacle, oil lubricant w/ dropper
     (3-in-one), parts plate<br>
     <br>
   </p>
@@ -267,7 +268,7 @@ src="n14_n18_hpfp_procedure_files/image011.jpg"><br>
   <p><img border=0 width=512 height=384
 src="n14_n18_hpfp_procedure_files/image012.jpg"><br>
     Remove solenoid mounting bolts.<br>
-    Remove 2 bolts (T25 torx bit socket 1/4&quot; w/ 3/8” to 1/4” socket adapter / 3/8”
+    Remove 2 bolts (T25 torx bit socket 1/4&quot; w/ 3/8ï¿½ to 1/4ï¿½ socket adapter / 3/8ï¿½
     ratchet).</p>
   <p><img border=0 width=512 height=384
 src="n14_n18_hpfp_procedure_files/image013.jpg"><br>
@@ -300,7 +301,7 @@ src="n14_n18_hpfp_procedure_files/image019.jpg"><br>
     Slide back left vise liner to be just behind left bolt mount protrusion.<br>
     Position HPFP to have little space between vise and oil overflow pod (picture).<br>
     Note: Space is needed to protect oil overflow pod.<br>
-    Lay HPFP flat on vise base and verify it’s not tilted.<br>
+    Lay HPFP flat on vise base and verify itï¿½s not tilted.<br>
     Strongly tighten vise jaws onto HPFP.</p>
   <p><img border=0 width=512 height=384
 src="n14_n18_hpfp_procedure_files/image020.jpg"><br>
@@ -350,8 +351,8 @@ src="n14_n18_hpfp_procedure_files/image028.jpg"></p>
   <p><img border=0 width=512 height=384
 src="n14_n18_hpfp_procedure_files/image029.jpg"><br>
     Remove dome bracket mounting bolts.<br>
-    Remove 3 dome bracket mounting bolts (T20 torx bit socket 1/4&quot; w/ 3/8” to
-    1/4” socket adapter / 3/8” ratchet).</p>
+    Remove 3 dome bracket mounting bolts (T20 torx bit socket 1/4&quot; w/ 3/8ï¿½ to
+    1/4ï¿½ socket adapter / 3/8ï¿½ ratchet).</p>
   <p><img border=0 width=512 height=384
 src="n14_n18_hpfp_procedure_files/image030.jpg"></p>
   <p><img border=0 width=512 height=384
@@ -412,7 +413,7 @@ src="n14_n18_hpfp_procedure_files/image039.jpg"><br>
     Slide back left vise liner to be just behind left bolt mount protrusion.<br>
     Position HPFP to position overflow pod a small distance from vise (picture).<br>
     Note: Space is needed to protect oil overflow pod.<br>
-    Lay HPFP flat on vise base and verify it’s not tilted.<br>
+    Lay HPFP flat on vise base and verify itï¿½s not tilted.<br>
     Strongly tighten vise jaws onto HPFP.</p>
   <p><img border=0 width=512 height=384
 src="n14_n18_hpfp_procedure_files/image040.jpg"><br>
@@ -424,7 +425,7 @@ src="n14_n18_hpfp_procedure_files/image041.jpg"></p>
   <p><img border=0 width=512 height=384
 src="n14_n18_hpfp_procedure_files/image042.jpg"><br>
     Remove rotary seal from dome.<br>
-    Insert pry tool into rotary seal just under rotary seal top (3/8” chisel).<br>
+    Insert pry tool into rotary seal just under rotary seal top (3/8ï¿½ chisel).<br>
     Hit down on end of pry tool to leverage against dome and pry out rotary seal from
     dome (2lb sledgehammer).<br>
     <br>
@@ -534,7 +535,7 @@ src="n14_n18_hpfp_procedure_files/image059.jpg"><br>
     <br>
     Note: If O-ring is yellow (Fluorosilicone), significant cleaning is needed to
     fully remove material.<br>
-    Note: It is important to fully clean bellows’ O-ring cavity. Verify last
+    Note: It is important to fully clean bellowsï¿½ O-ring cavity. Verify last
     cleaning has no material removed.</p>
   <p><img border=0 width=512 height=384
 src="n14_n18_hpfp_procedure_files/image060.jpg"><br>
@@ -544,7 +545,7 @@ src="n14_n18_hpfp_procedure_files/image060.jpg"><br>
     <br>
     Note: If O-ring is yellow (Fluorosilicone), significant cleaning is needed to
     fully remove material.<br>
-    Note: It is important to fully clean cylinders’ O-ring matting surface. Verify
+    Note: It is important to fully clean cylindersï¿½ O-ring matting surface. Verify
     last cleaning has no material removed.<br>
     <br>
   </p>
@@ -600,7 +601,7 @@ src="n14_n18_hpfp_procedure_files/image069.jpg"><br>
   <p><img border=0 width=512 height=384
 src="n14_n18_hpfp_procedure_files/image070.jpg"><br>
     Thread cylinders into HPFP body.<br>
-    Tighten 2 cylinders (4 pin socket / 1/2” ratchet).<br>
+    Tighten 2 cylinders (4 pin socket / 1/2ï¿½ ratchet).<br>
     Note: Down pressure on cylinder is needed to engage first thread.<br>
     Note: Tightening of cylinders presses down and mounts bellows into body
     cylinders.<br>
@@ -609,8 +610,8 @@ src="n14_n18_hpfp_procedure_files/image070.jpg"><br>
     location. Higher force is needed to complete tightening.</p>
   <p><img border=0 width=512 height=384
 src="n14_n18_hpfp_procedure_files/image071.jpg"><br>
-    Fully tighten 2 piston cylinders, 55 Nm (40.5 ft-lb) (4 pin socket / 3/8”
-    torque wrench &amp; 3/8” to 1/2&quot; socket adapter).<br>
+    Fully tighten 2 piston cylinders, 55 Nm (40.5 ft-lb) (4 pin socket / 3/8ï¿½
+    torque wrench &amp; 3/8ï¿½ to 1/2&quot; socket adapter).<br>
     <br>
   </p>
   <p>Clean HPFP cylinders recess area (brake cleaner / towels).</p>
@@ -671,7 +672,7 @@ src="n14_n18_hpfp_procedure_files/image079.jpg"><br>
 src="n14_n18_hpfp_procedure_files/image080.jpg"><br>
     Initially install dome bracket 2 rear mounting bolts.<br>
     Align bracket(s) and initially thread bracket 2 rear mounting bolts (T20 torx bit
-    socket 1/4&quot; w/ 3/8” to 1/4” socket adapter).<br>
+    socket 1/4&quot; w/ 3/8ï¿½ to 1/4ï¿½ socket adapter).<br>
     <br>
     Note: Present step picture and following three step pictures only show N14 with
     second bracket. N18 is same steps but without second bracket.</p>
@@ -679,19 +680,19 @@ src="n14_n18_hpfp_procedure_files/image080.jpg"><br>
 src="n14_n18_hpfp_procedure_files/image081.jpg"><br>
     Install dome bracket front mounting bolt.<br>
     Press down on bracket front and initially thread front bolt (T20 torx bit
-    socket 1/4&quot; w/ 3/8” to 1/4” socket adapter).</p>
+    socket 1/4&quot; w/ 3/8ï¿½ to 1/4ï¿½ socket adapter).</p>
   <p><img border=0 width=512 height=384
 src="n14_n18_hpfp_procedure_files/image082.jpg"><br>
     Tighten dome mounting bolts.<br>
     Evenly tighten 3 dome mounting bolts to evenly draw dome to HPFP body (T20 torx
-    bit socket 1/4&quot; w/ 3/8” to 1/4” socket adapter / 3/8” ratchet).<br>
+    bit socket 1/4&quot; w/ 3/8ï¿½ to 1/4ï¿½ socket adapter / 3/8ï¿½ ratchet).<br>
     <br>
     Note: Full bolt tightening is performed in next step.</p>
   <p><img border=0 width=512 height=384
 src="n14_n18_hpfp_procedure_files/image083.jpg"><br>
     Fully tighten dome mounting bolts<br>
     Fully tighten 3 dome mounting bolts, 10 Nm (7 ft-lb) (T20 torx bit socket 1/4&quot;
-    w/ 3/8” to 1/4” socket adapter / 3/8” torque wrench).<br>
+    w/ 3/8ï¿½ to 1/4ï¿½ socket adapter / 3/8ï¿½ torque wrench).<br>
     Note: Tighten bolts in multiple passes. Verify one pass with all bolts fully tightened.<br>
     <br>
   </p>
@@ -700,7 +701,7 @@ src="n14_n18_hpfp_procedure_files/image083.jpg"><br>
 src="n14_n18_hpfp_procedure_files/image084.jpg"><br>
     Mount swashplate shaft socket.<br>
     Place socket on swashplate shaft and hit multiple times to press onto shaft
-    ~3mm (~1/8”) (picture) (10mm 12 point 1/2” socket / 2lb sledgehammer).</p>
+    ~3mm (~1/8ï¿½) (picture) (10mm 12 point 1/2ï¿½ socket / 2lb sledgehammer).</p>
   <p><img border=0 width=512 height=384
 src="n14_n18_hpfp_procedure_files/image085.jpg"><br>
     Rotate swashplate to verify pistons function and to assess socket straightness.<br>
@@ -753,7 +754,7 @@ src="n14_n18_hpfp_procedure_files/image091.jpg"><br>
   <p><img border=0 width=512 height=384
 src="n14_n18_hpfp_procedure_files/image092.jpg"><br>
     Remove swashplate shaft socket.<br>
-    Pull and tilt socket in multiple directions until socket comes off shaft (1/2”
+    Pull and tilt socket in multiple directions until socket comes off shaft (1/2ï¿½
     ratchet).<br>
     <br>
   </p>
@@ -868,10 +869,10 @@ src="n14_n18_hpfp_procedure_files/image112.jpg"><br>
   <p><img border=0 width=512 height=384
 src="n14_n18_hpfp_procedure_files/image113.jpg"><br>
     Tighten 2 solenoid bolts evenly to draw solenoid evenly to HPFP (T25 torx bit
-    socket 1/4&quot; w/ 3/8” to 1/4” socket adapter / 3/8” ratchet).<br>
+    socket 1/4&quot; w/ 3/8ï¿½ to 1/4ï¿½ socket adapter / 3/8ï¿½ ratchet).<br>
     <br>
     Fully tighten 2 solenoid bolts, 12 Nm (8 ft-lb) (T25 torx bit socket 1/4&quot; w/
-    3/8” to 1/4” socket adapter / 3/8” torque wrench).<br>
+    3/8ï¿½ to 1/4ï¿½ socket adapter / 3/8ï¿½ torque wrench).<br>
     <br>
     Remove HPFP from vise.<br>
     <br>
@@ -879,7 +880,7 @@ src="n14_n18_hpfp_procedure_files/image113.jpg"><br>
   <p><u><span style='font-size:14.0pt'>Post repair procedures</span></u><br>
     <br>
   </p>
-  <p>© Copyright 2022 Beisan Systems, LLC<br>
+  <p>ï¿½ Copyright 2022 Beisan Systems, LLC<br>
     <br>
   </p>
 </div>
