--- a/procedures/n53_n54_hpfp_procedure.htm
+++ b/procedures/n53_n54_hpfp_procedure.htm
@@ -2,6 +2,7 @@
 
 <head>
 <meta http-equiv=Content-Type content="text/html; charset=windows-1252">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name=Generator content="Microsoft Word 14 (filtered)">
 <title>Beisan Systems - Procedures - N53/N54 HPFP Procedure</title>
 <style>
@@ -110,7 +111,7 @@ width modulation) signal, controls the fuel flow into the pump and thus in turn
 the high pressure fuel output of the pump into the high pressure fuel rail.<br>
 <br>
 The N53/N54 HPFP (high pressure fuel pump) experiences one primary failure. The
-bellows’ upper collar incorporates a small O-ring which separates the fuel
+bellowsï¿½ upper collar incorporates a small O-ring which separates the fuel
 chamber from the pump hydraulic fluid chamber. This O-ring fails and allows fuel
 to seep into the hydraulic fluid chamber. The hydraulic fluid then becomes
 contaminated and this changes its functional characteristics which causes the
@@ -257,21 +258,21 @@ Soft vise jaw liners (BS091) $15/each (www.beisansystems.com)</p>
 
 <p class=MsoNormal><img border=0 width=512 height=384
 src="n53_n54_hpfp_procedure_files/image004.jpg"><br>
-4” table mounted vise.</p>
+4ï¿½ table mounted vise.</p>
 
 <p class=MsoNormal>&nbsp;</p>
 
 <p class=MsoNormal><img border=0 width=512 height=384
 src="n53_n54_hpfp_procedure_files/image005.jpg"><br>
-22mm socket 1/2”, 14mm socket 1/2”, 13mm socket 1/2”, 3/8” to 1/2” socket
+22mm socket 1/2ï¿½, 14mm socket 1/2ï¿½, 13mm socket 1/2ï¿½, 3/8ï¿½ to 1/2ï¿½ socket
 adapter<br>
-T25 torx bit socket 1/4&quot;, T20 torx bit socket 1/4&quot;, 3/8” to 1/4”
+T25 torx bit socket 1/4&quot;, T20 torx bit socket 1/4&quot;, 3/8ï¿½ to 1/4ï¿½
 socket adapter<br>
-3/8” chisel, bent head pick tool (for O-rings removal)<br>
-1/2” short-arm ratchet, 3/8” short-arm ratchet<br>
-1” wide adjustable wrench, small medium-nose pliers<br>
+3/8ï¿½ chisel, bent head pick tool (for O-rings removal)<br>
+1/2ï¿½ short-arm ratchet, 3/8ï¿½ short-arm ratchet<br>
+1ï¿½ wide adjustable wrench, small medium-nose pliers<br>
 2 lb handheld sledgehammer<br>
-3/8” torque wrench (8 Nm [6 ft-lb]), 55 Nm [40.5 ft-lb]) (not shown)</p>
+3/8ï¿½ torque wrench (8 Nm [6 ft-lb]), 55 Nm [40.5 ft-lb]) (not shown)</p>
 
 <p class=MsoNormal>&nbsp;</p>
 
@@ -285,7 +286,7 @@ src="n53_n54_hpfp_procedure_files/image006.jpg"><br>
 src="n53_n54_hpfp_procedure_files/image007.jpg"><br>
 Paper towels, water based cleaner (simple green 10:1), brake cleaner, CHF 11S
 synthetic oil (6 oz)<br>
-Container (6”x4”x2”), 1 cup pouring receptacle, oil lubricant w/ dropper
+Container (6ï¿½x4ï¿½x2ï¿½), 1 cup pouring receptacle, oil lubricant w/ dropper
 (3-in-one), parts plate<br>
 <br>
 </p>
@@ -347,7 +348,7 @@ Strongly tighten vise jaws onto HPFP.</p>
 <p class=MsoNormal><img border=0 width=512 height=384
 src="n53_n54_hpfp_procedure_files/image012.jpg"><br>
 Remove solenoid mounting bolts.<br>
-Remove 2 bolts (T25 torx bit socket 1/4&quot; w/ 3/8” to 1/4” socket adapter / 3/8”
+Remove 2 bolts (T25 torx bit socket 1/4&quot; w/ 3/8ï¿½ to 1/4ï¿½ socket adapter / 3/8ï¿½
 ratchet).</p>
 
 <p class=MsoNormal>&nbsp;</p>
@@ -389,9 +390,9 @@ Strongly tighten vise jaws onto HPFP.</p>
 <p class=MsoNormal><img border=0 width=512 height=384
 src="n53_n54_hpfp_procedure_files/image017.jpg"><br>
 Remove dome front and left mounting bolts (T20 torx bit socket 1/4&quot; w/
-3/8” to 1/4” socket adapter / 3/8” ratchet).<br>
+3/8ï¿½ to 1/4ï¿½ socket adapter / 3/8ï¿½ ratchet).<br>
 Break seize, then quickly retighten, dome rear mounting bolt (T20 torx bit
-socket 1/4&quot; w/ 3/8” to 1/4” socket adapter / 3/8” ratchet).</p>
+socket 1/4&quot; w/ 3/8ï¿½ to 1/4ï¿½ socket adapter / 3/8ï¿½ ratchet).</p>
 
 <p class=MsoNormal>&nbsp;</p>
 
@@ -404,10 +405,10 @@ src="n53_n54_hpfp_procedure_files/image018.jpg"></p>
 src="n53_n54_hpfp_procedure_files/image019.jpg"><br>
 Remove HPFP dome.<br>
 Remove HPFP from vise and place it in container.<br>
-Remove dome remaining mounting bolt (T20 torx bit socket 1/4&quot; w/ 3/8” to
-1/4” socket adapter / 3/8” ratchet).<br>
+Remove dome remaining mounting bolt (T20 torx bit socket 1/4&quot; w/ 3/8ï¿½ to
+1/4ï¿½ socket adapter / 3/8ï¿½ ratchet).<br>
 Dome will be pushed off HPFP body by pistons/springs and oil will leak out.<br>
- <br>
+ï¿½<br>
 Note: Picture does not show leaking oil.</p>
 
 <p class=MsoNormal>&nbsp;</p>
@@ -435,7 +436,7 @@ src="n53_n54_hpfp_procedure_files/image022.jpg"></p>
 <p class=MsoNormal><img border=0 width=512 height=384
 src="n53_n54_hpfp_procedure_files/image023.jpg"><br>
 Break seize of rotor thread.<br>
-Position chisel left corner at swash plate oval indent left bottom corner (3/8”
+Position chisel left corner at swash plate oval indent left bottom corner (3/8ï¿½
 chisel) (picture).<br>
 Strongly hit chisel end to turn swash plate counter-clockwise (2 lb sledgehammer).<br>
 Repeat chisel strong hit until rotor thread seize breaks and swashplate rotates
@@ -643,7 +644,7 @@ Clean bellows O-ring cavity (brake cleaner / towels).<br>
 <br>
 Note: If O-ring is yellow (Fluorosilicone), significant cleaning is needed to
 fully remove material.<br>
-Note: It is important to fully clean bellows’ O-ring cavity. Verify last
+Note: It is important to fully clean bellowsï¿½ O-ring cavity. Verify last
 cleaning has no material removed.</p>
 
 <p class=MsoNormal>&nbsp;</p>
@@ -656,7 +657,7 @@ Body cylinders O-ring matting surface is below threads and above ledge.<br>
 <br>
 Note: If O-ring is yellow (Fluorosilicone), significant cleaning is needed to
 fully remove material.<br>
-Note: It is important to fully clean cylinders’ O-ring matting surface. Verify
+Note: It is important to fully clean cylindersï¿½ O-ring matting surface. Verify
 last cleaning has no material removed.<br>
 <br>
 </p>
@@ -744,7 +745,7 @@ Insert 3 cylinders inside 3 bellows.</p>
 <p class=MsoNormal><img border=0 width=512 height=384
 src="n53_n54_hpfp_procedure_files/image056.jpg"><br>
 Thread cylinders into HPFP body.<br>
-Tighten 3 cylinders (4 pin socket / 1/2” ratchet).<br>
+Tighten 3 cylinders (4 pin socket / 1/2ï¿½ ratchet).<br>
 Note: Down pressure on cylinder is needed to engage first thread.<br>
 Note: Tightening of cylinders presses down and mounts bellows into body
 cylinders.<br>
@@ -756,8 +757,8 @@ location. Higher force is needed to complete tightening.</p>
 
 <p class=MsoNormal><img border=0 width=512 height=384
 src="n53_n54_hpfp_procedure_files/image057.jpg"><br>
-Fully tighten 3 cylinders, 55 Nm (40.5 ft-lb) (4 pin socket / 3/8” torque
-wrench &amp; 3/8” to 1/2&quot; socket adapter).</p>
+Fully tighten 3 cylinders, 55 Nm (40.5 ft-lb) (4 pin socket / 3/8ï¿½ torque
+wrench &amp; 3/8ï¿½ to 1/2&quot; socket adapter).</p>
 
 <p class=MsoNormal>&nbsp;</p>
 
@@ -859,9 +860,9 @@ and protruding from dome cylinder (picture).<br>
 src="n53_n54_hpfp_procedure_files/image068.jpg"><br>
 Install dome mounting bolts.<br>
 Align dome and initially install right and rear bolt (T20 torx bit socket 1/4&quot;
-w/ 3/8” to 1/4” socket adapter).<br>
+w/ 3/8ï¿½ to 1/4ï¿½ socket adapter).<br>
 Press down on dome left side and initially mount left bolt (T20 torx bit socket
-1/4&quot; w/ 3/8” to 1/4” socket adapter).</p>
+1/4&quot; w/ 3/8ï¿½ to 1/4ï¿½ socket adapter).</p>
 
 <p class=MsoNormal>&nbsp;</p>
 
@@ -869,7 +870,7 @@ Press down on dome left side and initially mount left bolt (T20 torx bit socket
 src="n53_n54_hpfp_procedure_files/image069.jpg"><br>
 Tighten dome mounting bolts.<br>
 Evenly tighten 3 dome mounting bolts to evenly draw dome to HPFP body (T20 torx
-bit socket 1/4&quot; w/ 3/8” to 1/4” socket adapter / 3/8” ratchet).<br>
+bit socket 1/4&quot; w/ 3/8ï¿½ to 1/4ï¿½ socket adapter / 3/8ï¿½ ratchet).<br>
 Note: As needed, loosen vise jaws on HPFP to allow dome to seat on HPFP body
 without resistance to mounting.<br>
 <br>
@@ -881,7 +882,7 @@ Note: Full bolt tightening is performed in next step.</p>
 src="n53_n54_hpfp_procedure_files/image070.jpg"><br>
 Fully tighten dome mounting bolts<br>
 Fully tighten 3 dome mounting bolts, 8 Nm (6 ft-lb) (T20 torx bit socket 1/4&quot;
-w/ 3/8” to 1/4” socket adapter / 3/8” torque wrench).<br>
+w/ 3/8ï¿½ to 1/4ï¿½ socket adapter / 3/8ï¿½ torque wrench).<br>
 Note: Tighten bolts in multiple passes. Verify one pass with all bolts fully tightened.<br>
 <br>
 </p>
@@ -909,7 +910,7 @@ issues.</p>
 
 <p class=MsoNormal><img border=0 width=512 height=384
 src="n53_n54_hpfp_procedure_files/image073.jpg"><br>
-Fill pouring cup  ~1/2 (4 oz) full with HPFP oil (CHF 11S).</p>
+Fill pouring cupï¿½ ~1/2 (4 oz) full with HPFP oil (CHF 11S).</p>
 
 <p class=MsoNormal>&nbsp;</p>
 
@@ -1109,10 +1110,10 @@ thread bolts into HPFP (fingers).</p>
 <p class=MsoNormal><img border=0 width=512 height=384
 src="n53_n54_hpfp_procedure_files/image095.jpg"><br>
 Tighten 2 solenoid bolts evenly to draw solenoid evenly to HPFP (T25 torx bit
-socket 1/4&quot; w/ 3/8” to 1/4” socket adapter / 3/8” ratchet).<br>
+socket 1/4&quot; w/ 3/8ï¿½ to 1/4ï¿½ socket adapter / 3/8ï¿½ ratchet).<br>
 <br>
 Fully tighten 2 solenoid bolts, 12 Nm (8 ft-lb) (T25 torx bit socket 1/4&quot; w/
-3/8” to 1/4” socket adapter / 3/8” torque wrench).<br>
+3/8ï¿½ to 1/4ï¿½ socket adapter / 3/8ï¿½ torque wrench).<br>
 <br>
 Remove HPFP from Vise.<br>
 <br>
@@ -1122,7 +1123,7 @@ Remove HPFP from Vise.<br>
 <br>
 </p>
 
-<p class=MsoNormal>© Copyright 2022 Beisan Systems, LLC<br>
+<p class=MsoNormal>ï¿½ Copyright 2022 Beisan Systems, LLC<br>
 <br>
 </p>
 
