--- a/procedures/single_vanos_diaphragm_spring_procedure.htm
+++ b/procedures/single_vanos_diaphragm_spring_procedure.htm
@@ -1,6 +1,7 @@
 <html xmlns="undefined">
 <head>
 <meta http-equiv=Content-Type content="text/html; charset=windows-1252">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Beisan Systems - Procedures - Single Vanos Diaphragm Spring Procedure</title>
 <style>
 <!--
@@ -37,7 +38,7 @@ span.CharChar
     <br>
   </p>
   <p>BMW introduced its first variable valve timing systems in
-    93. It called its variable valve timing unit “vanos”. On the standard i6 engine
+    93. It called its variable valve timing unit ï¿½vanosï¿½. On the standard i6 engine
     this was a single vanos (intake adjustment) and was initially introduced on car
     models E36 320i/325i and E34 520i/525i. BMW soon realized its variable valve
     timing system was prone to a rattle. It modified the system to incorporate a
@@ -59,7 +60,7 @@ span.CharChar
     is needed.<br>
     <br>
     Variable valve timing is the modifying of the engine valve opening/closing
-    timing dynamically. BMW’s variable valve timing implements a time shift (phase
+    timing dynamically. BMWï¿½s variable valve timing implements a time shift (phase
     shift) scheme. The camshaft cam is not modified, thus all the characteristics
     of the opening and closing of the valve remain the same. What changes is the
     time when the valve opening/closing occurs relative to the crankshaft timing.
@@ -77,7 +78,7 @@ span.CharChar
   </p>
   <p>[picture]<br>
     The camshaft and camshaft sprocket are not mounted directly to each other. The
-    sprocket has a hole at its middle that’s larger than the camshaft end. Opposing
+    sprocket has a hole at its middle thatï¿½s larger than the camshaft end. Opposing
     slant helical gears are mounted at the sprocket hole and camshaft end. There is
     an independent splined shaft with a cup and helical gears on the inside and
     outside of the cup walls. The splined shaft cup inner helical gears match the
@@ -87,8 +88,8 @@ span.CharChar
     camshaft and sprocket. Inserting and withdrawing the splined shaft axially
     in/out of the camshaft and sprocket requires the rotation of a component due to
     the helical gears. The sprocket rotation is fixed by the timing chain. The
-    splined shaft can’t rotate due to the opposing helical gear slants on its cup
-    inside and outside. Thus it’s the camshaft that rotates when the splined shaft
+    splined shaft canï¿½t rotate due to the opposing helical gear slants on its cup
+    inside and outside. Thus itï¿½s the camshaft that rotates when the splined shaft
     is manipulated axially.<br>
     <br>
   </p>
@@ -168,8 +169,8 @@ src="single_vanos_diaphragm_spring_procedure_files/image001.jpg"><br>
     axially. This causes strong axial movements of the splined shaft. Any axial
     play in the splined shaft vicinity is engaged and can cause a rattle.<br>
     There are two locations of axial play. The helical gears themselves have axial
-    play that’s engaged and rattles and the vanos piston bearing has axial play
-    that’s engaged and rattles.<br>
+    play thatï¿½s engaged and rattles and the vanos piston bearing has axial play
+    thatï¿½s engaged and rattles.<br>
     <br>
     The splined shaft axial movements caused by the camshaft lashes are facilitated
     by the helical gear wear, but they are also enhanced by sprocket rotational
@@ -265,9 +266,9 @@ src="single_vanos_diaphragm_spring_procedure_files/image002.jpg"><br>
     is from BMW ETK and works properly.</p>
   <p><img border=0 width=512 height=384
 src="single_vanos_diaphragm_spring_procedure_files/image003.jpg"><br>
-    10mm socket 3/8”, 10mm deep socket 3/8”<br>
-    3/8” ratchet, 3/8” socket extension (short)<br>
-    3/8” torque wrench (10 Nm [7 ft-lb], 22 Nm [16 ft-lb])</p>
+    10mm socket 3/8ï¿½, 10mm deep socket 3/8ï¿½<br>
+    3/8ï¿½ ratchet, 3/8ï¿½ socket extension (short)<br>
+    3/8ï¿½ torque wrench (10 Nm [7 ft-lb], 22 Nm [16 ft-lb])</p>
   <p><img border=0 width=512 height=384
 src="single_vanos_diaphragm_spring_procedure_files/image004.jpg"><br>
     Magic marker<br>
@@ -296,7 +297,7 @@ href="http://www.beisansystems.com/procedures/vanos_single_procedure.htm">Single
     prevent any falling bolt/nut from dropping into oil sump.</u></p>
   <p><img border=0 width=512 height=384
 src="single_vanos_diaphragm_spring_procedure_files/image005.jpg"><br>
-    Remove intake sprocket 3 mounting nuts (10mm socket 3/8” / 3/8” ratchet &amp;
+    Remove intake sprocket 3 mounting nuts (10mm socket 3/8ï¿½ / 3/8ï¿½ ratchet &amp;
     extension).</p>
   <p><img border=0 width=512 height=384
 src="single_vanos_diaphragm_spring_procedure_files/image006.jpg"><br>
@@ -323,7 +324,7 @@ src="single_vanos_diaphragm_spring_procedure_files/image011.jpg"><br>
     Intake and exhaust after sprockets removal.</p>
   <p><img border=0 width=512 height=384
 src="single_vanos_diaphragm_spring_procedure_files/image012.jpg"><br>
-    Remove intake sprocket 3 mounting studs (10mm deep socket 3/8” / 3/8” ratchet).<br>
+    Remove intake sprocket 3 mounting studs (10mm deep socket 3/8ï¿½ / 3/8ï¿½ ratchet).<br>
     <br>
     Note: Maintain intake inner stop disk and notched wheel on camshaft.<br>
     <br>
@@ -332,9 +333,9 @@ src="single_vanos_diaphragm_spring_procedure_files/image012.jpg"><br>
     components</span></u></p>
   <p><img border=0 width=512 height=384
 src="single_vanos_diaphragm_spring_procedure_files/image013.jpg"><br>
-    Install intake sprocket 3 new mounting studs (10mm deep socket 3/8” / 3/8”
+    Install intake sprocket 3 new mounting studs (10mm deep socket 3/8ï¿½ / 3/8ï¿½
     ratchet).<br>
-    Fully tighten 22 Nm (16 ft-lb) (10mm deep socket 3/8” / 3/8” torque wrench).<br>
+    Fully tighten 22 Nm (16 ft-lb) (10mm deep socket 3/8ï¿½ / 3/8ï¿½ torque wrench).<br>
     Note: Tighten studs evenly in multiple passes.<br>
     Note: Verify one pass with all studs fully tightened.<br>
     <br>
@@ -358,9 +359,9 @@ src="single_vanos_diaphragm_spring_procedure_files/image017.jpg"><br>
     plate, 4mm).</p>
   <p><img border=0 width=512 height=384
 src="single_vanos_diaphragm_spring_procedure_files/image018.jpg"><br>
-    Install intake sprocket new 3 mounting nuts (10mm socket 3/8” / 3/8” ratchet
+    Install intake sprocket new 3 mounting nuts (10mm socket 3/8ï¿½ / 3/8ï¿½ ratchet
     &amp; extension).<br>
-    Fully tighten 10 Nm (7 ft-lb) (10mm socket 3/8” / 3/8” torque wrench &amp;
+    Fully tighten 10 Nm (7 ft-lb) (10mm socket 3/8ï¿½ / 3/8ï¿½ torque wrench &amp;
     extension).<br>
     Note: Tighten nuts evenly in multiple passes.<br>
     Note: Verify one pass with all nuts fully tightened.<br>
@@ -371,7 +372,7 @@ src="single_vanos_diaphragm_spring_procedure_files/image018.jpg"><br>
     <br>
     <br>
   </p>
-  <p>© Copyright 2022 Beisan Systems, LLC<br>
+  <p>ï¿½ Copyright 2022 Beisan Systems, LLC<br>
     <br>
   </p>
 </div>
