--- a/procedures/single_vanos_rattle_procedure.htm
+++ b/procedures/single_vanos_rattle_procedure.htm
@@ -1,6 +1,7 @@
 <html>
 <head>
 <meta http-equiv=Content-Type content="text/html; charset=windows-1252">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Beisan Systems - Procedures - Single Vanos Rattle Procedure</title>
 <style>
 <!--
@@ -42,10 +43,10 @@ span.BalloonTextChar {
   <p><b><span style='font-size:14.0pt'>Introduction</span><br>
     <br>
     </b></p>
-  <p>“Vanos” is BMW’s name for its variable valve timing units.
+  <p>ï¿½Vanosï¿½ is BMWï¿½s name for its variable valve timing units.
     Vanos units take on various shapes and design according to car year and model
     (engine model). The vanos discussed here is BMW part # 11-36-1-748-036 (M50TU,
-    US S50) and 11-36-1-748-819 (M52, S52). It’s a single vanos, meaning only the
+    US S50) and 11-36-1-748-819 (M52, S52). Itï¿½s a single vanos, meaning only the
     intake valve timing is varied. This vanos unit is part of BMW 6-cylinder
     engines M50TU, M52, US S50, S52. These engines were incorporated into a wide
     range of car models during years 1993-1999. They are found in the 3-series E36
@@ -62,7 +63,7 @@ span.BalloonTextChar {
     found on the helical gears and the vanos piston bearing. Replacing the helical
     gear components is expensive and the gears will wear again and the rattle will
     return. Removing the vanos piston bearing axial play significantly reduces the
-    rattle to the point where it’s barely heard or not heard at all in the
+    rattle to the point where itï¿½s barely heard or not heard at all in the
     passenger compartment. Performance cams like the cams on the M3 or aftermarket performance
     cams (Schrick/Sunbelt) create stronger camshaft lash forces and thus are more
     susceptible to causing a rattle.<br>
@@ -80,7 +81,7 @@ span.BalloonTextChar {
     of the BMW variable valve timing system is needed.<br>
     <br>
     Variable valve timing is the modifying of the engine valve opening/closing
-    timing dynamically. BMW’s variable valve timing implements a time shift (phase
+    timing dynamically. BMWï¿½s variable valve timing implements a time shift (phase
     shift) scheme. The camshaft cam is not modified, thus all the characteristics
     of the opening and closing of the valve remain the same. What changes is the
     time when the valve opening/closing occurs relative to the crankshaft timing. The
@@ -98,7 +99,7 @@ span.BalloonTextChar {
   </p>
   <p>[picture]<br>
     The camshaft and camshaft sprocket are not mounted directly to each other. The
-    sprocket has a hole at its middle that’s larger than the camshaft end. Opposing
+    sprocket has a hole at its middle thatï¿½s larger than the camshaft end. Opposing
     slant helical gears are mounted at the sprocket hole and camshaft end. There is
     an independent splined shaft with a cup and helical gears on the inside and
     outside of the cup walls. The splined shaft cup inner helical gears match the
@@ -108,8 +109,8 @@ span.BalloonTextChar {
     camshaft and sprocket. Inserting and withdrawing the splined shaft axially
     in/out of the camshaft and sprocket requires the rotation of a component due to
     the helical gears. The sprocket rotation is fixed by the timing chain. The
-    splined shaft can’t rotate due to the opposing helical gear slants on its cup
-    inside and outside. Thus it’s the camshaft that rotates when the splined shaft
+    splined shaft canï¿½t rotate due to the opposing helical gear slants on its cup
+    inside and outside. Thus itï¿½s the camshaft that rotates when the splined shaft
     is manipulated axially.<br>
     <br>
   </p>
@@ -171,8 +172,8 @@ span.BalloonTextChar {
     axially. This causes strong axial movements of the splined shaft. Any axial
     play in the splined shaft vicinity is engaged and can cause a rattle.<br>
     There are two locations of axial play. The helical gears themselves have axial
-    play that’s engaged and rattles and the vanos piston bearing has axial play
-    that’s engaged and rattles.<br>
+    play thatï¿½s engaged and rattles and the vanos piston bearing has axial play
+    thatï¿½s engaged and rattles.<br>
     <br>
     Testing has been performed to assess and attempt to reduce the rattling. The
     vanos piston bearing radial play was modified and the results indicated little
@@ -215,12 +216,12 @@ span.BalloonTextChar {
     <br>
     Removing the bearing axial play requires modifying or replacing at least one
     bearing component. The thrust bearings are a standard part and are manufactured
-    to tight tolerances. It’s not feasible to modify or replace them. The ring and
+    to tight tolerances. Itï¿½s not feasible to modify or replace them. The ring and
     center washer are non standard parts and are manufactured to loose tolerances. The
     ring height can be reduced or the center washer height can be increased to
     remove the bearing axial play. The ring has been found to have a large height
     variation and the washer has been found to have a smaller height variation. Due
-    to these findings, it’s more effective to replace the ring. A bearing
+    to these findings, itï¿½s more effective to replace the ring. A bearing
     adjustment can be made at installation to address any minor axial fit
     variation.<br>
     <br>
@@ -232,7 +233,7 @@ span.BalloonTextChar {
     ring is manufactured to the same specification as the original bearing ring but
     with a shorter height and a very tight height tolerance. The other ring
     dimensions are also manufactured to tight tolerances.<br>
-    The bearing ring is a difficult and expensive component to manufacture. It’s
+    The bearing ring is a difficult and expensive component to manufacture. Itï¿½s
     made from a special bearing steel and hardened to a high hardness. All its
     surfaces are ground. This technique allows for machining hard parts to a high
     dimensional tolerance and a polished surface.<br>
@@ -324,11 +325,11 @@ href="http://www.beisansystems.com/procedures/single_vanos_diaphragm_spring_proc
   <p><img border=0 width=512 height=384
 src="single_vanos_rattle_procedure_files/image001.jpg"><br>
     Single vanos rattle repair kit (BS012) $30/each (www.beisansystems.com), 18mm modified
-    socket - 1/2” drive (BS093) $5/each (www.beisansystems.com), soft vise jaw
+    socket - 1/2ï¿½ drive (BS093) $5/each (www.beisansystems.com), soft vise jaw
     liners (BS091) $15/each (www.beisansystems.com)<br>
     <br>
     Note: If car model year is 93 (first year of single vanos), vanos piston
-    bolt/cap can be 17mm or 18mm, thus also acquire 17mm modified socket - 1/2”
+    bolt/cap can be 17mm or 18mm, thus also acquire 17mm modified socket - 1/2ï¿½
     drive (BS092) $5/each (www.beisansystems.com)<br>
     <br>
     Caution: Beisan soft vise jaw liners are critical to performing repair. They
@@ -343,7 +344,7 @@ src="single_vanos_rattle_procedure_files/image001.jpg"><br>
     will cause socket to slip and damage piston bolt/cap head.</p>
   <p><img border=0 width=512 height=384
 src="single_vanos_rattle_procedure_files/image002.jpg"><br>
-    4”, or larger, swivel vise (Harbor Freight, 4” at store $45)<br>
+    4ï¿½, or larger, swivel vise (Harbor Freight, 4ï¿½ at store $45)<br>
     <br>
     Note: Vise must be mounted for use.</p>
   <p><img border=0 width=512 height=384
@@ -351,7 +352,7 @@ src="single_vanos_rattle_procedure_files/image003.jpg"><br>
     1/2&quot; long-arm ratchet, 1/4&quot; ratchet, 3/8&quot; torque wrench w/
     reverse function (8 Nm [6 ft-lb], 40 Nm [30 ft-lb])<br>
     Magnet pickup, 90 degree pick tool<br>
-    T30 torx bit socket 1/4&quot;, 3/8” to 1/4&quot; socket adapter, 3/8” to
+    T30 torx bit socket 1/4&quot;, 3/8ï¿½ to 1/4&quot; socket adapter, 3/8ï¿½ to
     1/2&quot; socket adapter<br>
     <br>
     Not shown: Heat gun (or alternate heating device)</p>
@@ -389,7 +390,7 @@ src="single_vanos_rattle_procedure_files/image006.jpg"><br>
     shaft in/out of piston.<br>
     Note: Radial play, side to side movement, is normal and necessary. This should
     not be confused with axial play, in/out movement.</p>
-  <p> <img border=0 width=512 height=384
+  <p>ï¿½<img border=0 width=512 height=384
 src="single_vanos_rattle_procedure_files/image007.jpg"><br>
     Attach soft vise jaw liners to vise jaws.<br>
     Place liner with horizontal V notch on vise inner jaw (picture left).<br>
@@ -426,7 +427,7 @@ src="single_vanos_rattle_procedure_files/image010.jpg"><br>
     aluminum, can damage piston apparatus.</p>
   <p><img border=0 width=512 height=384
 src="single_vanos_rattle_procedure_files/image011.jpg"><br>
-    Loosen (break seize) piston bolt/cap (18mm modified socket 1/2” / 1/2” long-arm
+    Loosen (break seize) piston bolt/cap (18mm modified socket 1/2ï¿½ / 1/2ï¿½ long-arm
     ratchet).<br>
     Hold in tool at bolt/cap (hand). Bolt/cap head is short and tool can dislodge.<br>
     If piston or cover rotate in vise jaws reposition piston apparatus per above
@@ -446,7 +447,7 @@ src="single_vanos_rattle_procedure_files/image012.jpg"><br>
 src="single_vanos_rattle_procedure_files/image013.jpg"></p>
   <p><img border=0 width=512 height=384
 src="single_vanos_rattle_procedure_files/image014.jpg"><br>
-    Remove piston bolt/cap (18mm modified socket 1/2” / hand).</p>
+    Remove piston bolt/cap (18mm modified socket 1/2ï¿½ / hand).</p>
   <p><img border=0 width=512 height=384
 src="single_vanos_rattle_procedure_files/image015.jpg"><br>
     Remove bearing top washer (magnet pickup).<br>
@@ -533,7 +534,7 @@ src="single_vanos_rattle_procedure_files/image023.jpg"></p>
   <p><img border=0 width=512 height=384
 src="single_vanos_rattle_procedure_files/image030.jpg"><br>
     Insert new bearing outer ring in piston (fingers).<br>
-    Note: New ring is marked “BS” on outer perimeter.<br>
+    Note: New ring is marked ï¿½BSï¿½ on outer perimeter.<br>
     Initially insert ring in piston.<br>
     Insert right and left index fingers into ring. Press fingers against ring inner
     right and left walls and manipulate ring side to side while slightly pressing
@@ -563,8 +564,8 @@ src="single_vanos_rattle_procedure_files/image034.jpg"><br>
 src="single_vanos_rattle_procedure_files/image035.jpg"><br>
     Install bearing / splined shaft mounting bolt; <u>left hand thread</u> (T30
     torx bit socket 1/4&quot; / 1/4&quot; ratchet).<br>
-    Fully tighten, 8 Nm (6 ft-lb); <u>left hand thread</u> (T30 torx bit socket 1/4”
-    / 3/8” torque wrench &amp; 3/8” to 1/4&quot; socket adapter).<br>
+    Fully tighten, 8 Nm (6 ft-lb); <u>left hand thread</u> (T30 torx bit socket 1/4ï¿½
+    / 3/8ï¿½ torque wrench &amp; 3/8ï¿½ to 1/4&quot; socket adapter).<br>
     <br>
     <span style='color:red'>Caution: Do not over tighten bolt. 8 Nm (6 ft-lb) is
     slight torque.</span></p>
@@ -592,7 +593,7 @@ src="single_vanos_rattle_procedure_files/image040.jpg"></p>
   <p><img border=0 width=512 height=384
 src="single_vanos_rattle_procedure_files/image041.jpg"><br>
     Install piston bolt/cap. <br>
-    Counter hold piston and tighten bolt/cap (18mm modified socket 1/2” / hand).<br>
+    Counter hold piston and tighten bolt/cap (18mm modified socket 1/2ï¿½ / hand).<br>
     Only hand tighten bolt/cap.</p>
   <p><img border=0 width=512 height=384
 src="single_vanos_rattle_procedure_files/image042.jpg"><br>
@@ -628,8 +629,8 @@ src="single_vanos_rattle_procedure_files/image045.jpg"><br>
     aluminum, can damage piston apparatus.</p>
   <p><img border=0 width=512 height=384
 src="single_vanos_rattle_procedure_files/image046.jpg"><br>
-    Fully tighten piston bolt/cap, 40 Nm (30 ft-lb) (18mm modified socket 1/2” / 3/8”
-    torque wrench &amp; 3/8” to 1/2&quot; socket adapter).<br>
+    Fully tighten piston bolt/cap, 40 Nm (30 ft-lb) (18mm modified socket 1/2ï¿½ / 3/8ï¿½
+    torque wrench &amp; 3/8ï¿½ to 1/2&quot; socket adapter).<br>
     Hold in tool at bolt/cap (hand). Bolt/cap head is short and tool can dislodge.<br>
     If piston or cover rotate in vise jaws reposition piston apparatus per above
     instructions and strongly tighten vise.<br>
@@ -669,7 +670,7 @@ src="single_vanos_rattle_procedure_files/image047.jpg"><br>
     Disassemble piston bearing per above procedure.<br>
     Place sandpaper (~400 grade) on flat table top. Place bearing center washer on
     sandpaper.<br>
-    Slide washer side to side on sandpaper ~6” back and forth while moderately
+    Slide washer side to side on sandpaper ~6ï¿½ back and forth while moderately
     pressing washer on sandpaper. Perform sanding for 10 seconds.<br>
     Rotate washer 90 degrees and repeat sanding process.<br>
     Flip washer to opposite side and repeat above sanding procedure; 10 seconds
@@ -686,7 +687,7 @@ src="single_vanos_rattle_procedure_files/image048.jpg"><br>
     tightening adjustment is needed.<br>
     Disassemble piston bearing per above procedure.<br>
     Place sandpaper (~400 grade) on flat table top. Place bearing ring on sandpaper.<br>
-    Slide ring side to side on sandpaper ~6” back and forth while moderately
+    Slide ring side to side on sandpaper ~6ï¿½ back and forth while moderately
     pressing ring on sandpaper. Perform sanding for 10 seconds.<br>
     Rotate ring 90 degrees and repeat sanding process.<br>
     Flip ring to opposite side and repeat above sanding procedure; 10 seconds
@@ -706,7 +707,7 @@ src="single_vanos_rattle_procedure_files/image048.jpg"><br>
     <br>
     <br>
   </p>
-  <p>© Copyright 2022 Beisan Systems, LLC<br>
+  <p>ï¿½ Copyright 2022 Beisan Systems, LLC<br>
     <br>
   </p>
 </div>
