--- a/procedures/swing_arm_ball_joints_procedure.htm
+++ b/procedures/swing_arm_ball_joints_procedure.htm
@@ -1,6 +1,7 @@
 <html xmlns="undefined">
 <head>
 <meta http-equiv=Content-Type content="text/html; charset=windows-1252">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Beisan Systems - Procedures - Swing Arm Ball Joints Procedure</title>
 <style>
 <!--
@@ -25,7 +26,7 @@ style='font-size:16.0pt'>E39 Swing Arm Ball Joints Write-up</span></b><br>
     <br>
   </p>
   <p>One of the most wearable components of the rear suspension
-    system is the swing arm ball joint. Its lifespan is approximately 75k ±20k
+    system is the swing arm ball joint. Its lifespan is approximately 75k ï¿½20k
     miles.<br>
     <br>
   </p>
@@ -68,7 +69,7 @@ src="swing_arm_ball_joints_procedure_files/image002.jpg"><br>
   </p>
   <p>The ball joint ball and socket matting surfaces
     deteriorate/shrink with use and wear and a space in the joint slowly develops.
-    This space creates “play” in the suspension configuration thus changing its
+    This space creates ï¿½playï¿½ in the suspension configuration thus changing its
     designed characteristics.<br>
     <br>
   </p>
@@ -89,10 +90,10 @@ src="swing_arm_ball_joints_procedure_files/image002.jpg"><br>
 src="swing_arm_ball_joints_procedure_files/image003.jpg"><br>
     For each rear wheel perform the following.<br>
     Position yourself on your knees at the wheel. Place one hand on the tire 12
-    o’clock inner shoulder, and the other hand on the wheel rim 6 o’clock outer lip.
-    Engage your shoulder at the 12 o’clock end. Attempt to push in at the 6 o’clock
+    oï¿½clock inner shoulder, and the other hand on the wheel rim 6 oï¿½clock outer lip.
+    Engage your shoulder at the 12 oï¿½clock end. Attempt to push in at the 6 oï¿½clock
     position.<br>
-    Note: That’s my pastor friend from Syria, 70 years old. Loves working on the
+    Note: Thatï¿½s my pastor friend from Syria, 70 years old. Loves working on the
     car!<br>
     <br>
   </p>
@@ -100,14 +101,14 @@ src="swing_arm_ball_joints_procedure_files/image003.jpg"><br>
     but quick movement, free space. A small incremental movement proportional to
     incremental pressure is normal.<br>
     Note: The ball joint is packed in grease and sometimes that can inhibit the
-    “free space” movement, making the diagnosis difficult. The next step is more
+    ï¿½free spaceï¿½ movement, making the diagnosis difficult. The next step is more
     definitive.</p>
   <p><img width=512 height=384
 src="swing_arm_ball_joints_procedure_files/image002.jpg"><br>
     If you find play, have a second person perform the above diagnosis procedure while
     you inspect the ball joint on the wheel inboard side. The ball joint is the
-    metal/rubber component that’s located at the bottom rear of the wheel carrier. If
-    you see one of the rubber boots move, that’s an indication of free space in the
+    metal/rubber component thatï¿½s located at the bottom rear of the wheel carrier. If
+    you see one of the rubber boots move, thatï¿½s an indication of free space in the
     ball joint and thus a faulty joint.<br>
     <br>
   </p>
@@ -137,21 +138,21 @@ src="swing_arm_ball_joints_procedure_files/image004.jpg"><br>
     Ball Joint Press (90-88-6-334-190) $74.25, Spindle (90-88-6-333-333) $71.00</p>
   <p><img width=512 height=384
 src="swing_arm_ball_joints_procedure_files/image005.jpg"><br>
-    8mm combo wrench, 5/8” [~16mm] combo wrench (&#8804; 9”), 16mm combo wrench
-    (&#8804; 9”), 18mm combo wrench<br>
-    8 mm socket 1/4”, 10mm socket 1/4”, 13mm socket 3/8”, 18mm socket 1/2”, 24mm (~15/16”)
-    socket 1/2”, 24mm (~15/16”) deep socket 1/2”<br>
-    1/4” ratchet, 3/8” ratchet w/ extension, 1/2” ratchet, 1/2” torque wrench (105 Nm
-    [77 ft-lb], 256 Nm [189 ft-lb]) (Craftsman, etc.), 1/2” breaker bar (24”)</p>
+    8mm combo wrench, 5/8ï¿½ [~16mm] combo wrench (&#8804; 9ï¿½), 16mm combo wrench
+    (&#8804; 9ï¿½), 18mm combo wrench<br>
+    8 mm socket 1/4ï¿½, 10mm socket 1/4ï¿½, 13mm socket 3/8ï¿½, 18mm socket 1/2ï¿½, 24mm (~15/16ï¿½)
+    socket 1/2ï¿½, 24mm (~15/16ï¿½) deep socket 1/2ï¿½<br>
+    1/4ï¿½ ratchet, 3/8ï¿½ ratchet w/ extension, 1/2ï¿½ ratchet, 1/2ï¿½ torque wrench (105 Nm
+    [77 ft-lb], 256 Nm [189 ft-lb]) (Craftsman, etc.), 1/2ï¿½ breaker bar (24ï¿½)</p>
   <p><img width=512 height=384
 src="swing_arm_ball_joints_procedure_files/image006.jpg"><br>
     Measuring tape, needle nose pliers, small chisel, large flathead screwdriver, ~1lb
-    dead blow hammer, claw hammer (common), 18” pry bar</p>
+    dead blow hammer, claw hammer (common), 18ï¿½ pry bar</p>
   <p><img width=512 height=384
 src="swing_arm_ball_joints_procedure_files/image007.jpg"><br>
     Paper towels, brake cleaner, spray lubricant, graphite based grease (Sta-Lube,
     Synthetic Grease, CRC)<br>
-    Wire brush (stainless steel only), 3” 2x4 wood block, medium grade sanding paper
+    Wire brush (stainless steel only), 3ï¿½ 2x4 wood block, medium grade sanding paper
     and sanding block<br>
     <br>
   </p>
@@ -162,35 +163,35 @@ src="swing_arm_ball_joints_procedure_files/image007.jpg"><br>
     <br>
   </p>
   <p>To tighten the integral link bolt (105 Nm) and swing arm bolt/nut
-    (256 Nm) at the end of the repair, BMW requires the car be in “empty weight
-    position” or “normal position” (i.e. “normal position” optional).<br>
+    (256 Nm) at the end of the repair, BMW requires the car be in ï¿½empty weight
+    positionï¿½ or ï¿½normal positionï¿½ (i.e. ï¿½normal positionï¿½ optional).<br>
     This method is utilized for most rear end suspension repairs, and is necessary
     to assure the bushing center is locked with the frame (tightened) at a neutral /
     middle of range suspension position. As the suspension maneuvers (up/down), the
     bushing outer sleeve will rotate/torque, but the center shaft will be locked in
     with an independent frame. The middle rubber bushing will consequently be
     twisted/torqued. To attempt to minimize this stress, the bushing center is
-    tightened down in a suspension neutral / middle of range position, “empty
-    weight position” or “normal position”.<br>
+    tightened down in a suspension neutral / middle of range position, ï¿½empty
+    weight positionï¿½ or ï¿½normal positionï¿½.<br>
     <br>
   </p>
-  <p>“Empty weight position” requires the car to be resting on
+  <p>ï¿½Empty weight positionï¿½ requires the car to be resting on
     all four wheels (level ground), with tires properly inflated, and a full gas
     tank.<br>
-    “Normal position” requires, in addition to “empty weight position” requirements,
+    ï¿½Normal positionï¿½ requires, in addition to ï¿½empty weight positionï¿½ requirements,
     that the car be weighed down; specifically: 150lb in each front seat (seat in
     center position), 150lb in center of back seat, 50lb in center of trunk.<br>
     <br>
   </p>
   <p>Tightening the integral link bolt and swing arm bolt/nut
-    with the car on the ground is quite difficult. As an alternative, “empty weight
-    position” or “normal position” can be emulated by jacking up the wheel carrier
+    with the car on the ground is quite difficult. As an alternative, ï¿½empty weight
+    positionï¿½ or ï¿½normal positionï¿½ can be emulated by jacking up the wheel carrier
     to the position achieved by the configuration. Of course to accomplish this,
-    the position of the wheel carrier in that configuration, “empty weight
-    position” or “normal position”, would need to be known in advance.</p>
+    the position of the wheel carrier in that configuration, ï¿½empty weight
+    positionï¿½ or ï¿½normal positionï¿½, would need to be known in advance.</p>
   <p><img width=512 height=384
 src="swing_arm_ball_joints_procedure_files/image008.jpg"><br>
-    Fill car gas tank. Inflate tires to proper pressures. For “normal position”,
+    Fill car gas tank. Inflate tires to proper pressures. For ï¿½normal positionï¿½,
     load car with 150lb in each front seat (seat in center position), 150lb in
     center of back seat, 50lb in center of trunk; move car to settle suspension.
     Park car on level ground. Note: This is quite important to achieving a proper
@@ -207,8 +208,8 @@ src="swing_arm_ball_joints_procedure_files/image008.jpg"><br>
     <br>
   </p>
   <p>Note: On my car, 528i 2000 5sp standard suspension touring
-    225/55 R16, the measurement decreased by 1” between the configuration without
-    the weights (16 1/2”) and then with the weights (15 1/2”).<br>
+    225/55 R16, the measurement decreased by 1ï¿½ between the configuration without
+    the weights (16 1/2ï¿½) and then with the weights (15 1/2ï¿½).<br>
     <br>
   </p>
   <p><u><span style='font-size:14.0pt'>Repair</span></u><br>
@@ -221,7 +222,7 @@ src="swing_arm_ball_joints_procedure_files/image008.jpg"><br>
   </p>
   <p>The following procedure shows the left side (driver side).
     The right side is the same but with minor noted differences.<br>
-    It’s more effective to perform the left side first since it’s illustrated with
+    Itï¿½s more effective to perform the left side first since itï¿½s illustrated with
     pictures.</p>
   <p><img width=512 height=384
 src="swing_arm_ball_joints_procedure_files/image009.jpg"><br>
@@ -231,14 +232,14 @@ src="swing_arm_ball_joints_procedure_files/image009.jpg"><br>
   <p><img width=512 height=384
 src="swing_arm_ball_joints_procedure_files/image010.jpg"><br>
     Right side: xenon lights: Disconnect level sensor regulating rod joint. Counter
-    hold inside nut and remove outside nut (needle nose pliers, 10mm socket 1/4” / 1/4”
+    hold inside nut and remove outside nut (needle nose pliers, 10mm socket 1/4ï¿½ / 1/4ï¿½
     ratchet). Remove bolt, and rotate regulating rod down.<br>
     Check regulating rod ball joints as described below for stabilizer bar link.</p>
   <p><img width=512 height=384
 src="swing_arm_ball_joints_procedure_files/image011.jpg"><br>
     Disconnect stabilizer bar link joint at swing arm. First, push aside ball joint
     boot from inside nut (flathead). Counter hold inside nut and remove outside nut
-    (5/8” [~16mm] combo wrench, 16mm combo wrench). If tool not fitting well on
+    (5/8ï¿½ [~16mm] combo wrench, 16mm combo wrench). If tool not fitting well on
     inside nut, then repeat boot removal attempt. Inside nut has only two flat
     facets, so outside nut might need to be turned to spin inside nut into a tool
     accessible orientation.<br>
@@ -257,9 +258,9 @@ src="swing_arm_ball_joints_procedure_files/image011.jpg"><br>
 src="swing_arm_ball_joints_procedure_files/image012.jpg"></p>
   <p><img width=512 height=384
 src="swing_arm_ball_joints_procedure_files/image013.jpg"><br>
-    Remove swing arm mounting nut. Break nut seize (24mm socket 1/2” / 1/2” breaker
-    bar), then counter hold bolt and remove nut (18mm combo wrench, 24mm socket 1/2”
-    / 1/2” ratchet).</p>
+    Remove swing arm mounting nut. Break nut seize (24mm socket 1/2ï¿½ / 1/2ï¿½ breaker
+    bar), then counter hold bolt and remove nut (18mm combo wrench, 24mm socket 1/2ï¿½
+    / 1/2ï¿½ ratchet).</p>
   <p><img width=512 height=384
 src="swing_arm_ball_joints_procedure_files/image014.jpg"><br>
     Withdraw swing arm mounting bolt from swing arm front end (car front). Nudge
@@ -275,12 +276,12 @@ src="swing_arm_ball_joints_procedure_files/image015.jpg"><br>
     tool.</p>
   <p><img width=512 height=384
 src="swing_arm_ball_joints_procedure_files/image016.jpg"><br>
-    Remove integral link bolt (18mm socket 1/2” / 1/2” breaker bar &amp; 1/2” ratchet).
+    Remove integral link bolt (18mm socket 1/2ï¿½ / 1/2ï¿½ breaker bar &amp; 1/2ï¿½ ratchet).
     Remove integral link from swing arm.<br>
     <br>
   </p>
   <p>Leverage (pry bar) against axel to push down swing arm, and
-    pull up and out  on rotor bottom to detach swing arm and wheel carrier at ball
+    pull up and outï¿½ on rotor bottom to detach swing arm and wheel carrier at ball
     joint.</p>
   <p><img width=512 height=384
 src="swing_arm_ball_joints_procedure_files/image017.jpg"><br>
@@ -319,7 +320,7 @@ src="swing_arm_ball_joints_procedure_files/image019.jpg"><br>
     Note: This step is essential to the proper function and maintenance of the tool.</p>
   <p><img width=512 height=384
 src="swing_arm_ball_joints_procedure_files/image020.jpg"><br>
-    Twist press tool small press cap onto ball joint rear end so that it’s flush
+    Twist press tool small press cap onto ball joint rear end so that itï¿½s flush
     with metal sleeve.<br>
     Arrange spindle with receive sleeve (notched cylinder) and plate (notched puck),
     and orient receive sleeve/plate notch to align with wheel carrier protrusion.
@@ -328,18 +329,18 @@ src="swing_arm_ball_joints_procedure_files/image020.jpg"><br>
     press cap end, but not be tightened to press cap. Thread to end then loosen 1/2
     turn.<br>
     Tighten press nut until press cap and receive sleeve are flush with ball joint
-    metal sleeve ends (24mm deep socket 1/2” / 1/2” ratchet). Double check all
+    metal sleeve ends (24mm deep socket 1/2ï¿½ / 1/2ï¿½ ratchet). Double check all
     seating and alignment.</p>
   <p><img width=512 height=384
 src="swing_arm_ball_joints_procedure_files/image021.jpg"><br>
     Tighten press nut until ball joint is completely removed from wheel carrier
-    bore (press tool will loosen) (24mm deep socket 1/2” / 1/2” ratchet).<br>
+    bore (press tool will loosen) (24mm deep socket 1/2ï¿½ / 1/2ï¿½ ratchet).<br>
     <br>
     <br>
   </p>
   <p>Remove press nut tightening tool (ratchet, then deep
     socket), and pull press tool out of wheel carrier bore. Loosen press nut (24mm
-    deep socket 1/2” / 1/2” ratchet), and unscrew spindle from press cap (8mm combo
+    deep socket 1/2ï¿½ / 1/2ï¿½ ratchet), and unscrew spindle from press cap (8mm combo
     wrench). Twist off press cap from ball joint.</p>
   <p><img width=512 height=384
 src="swing_arm_ball_joints_procedure_files/image022.jpg"><br>
@@ -348,7 +349,7 @@ src="swing_arm_ball_joints_procedure_files/image022.jpg"><br>
     grease/lubricant.</p>
   <p><img width=512 height=384
 src="swing_arm_ball_joints_procedure_files/image023.jpg"><br>
-    Twist large press cap onto new ball joint front end (wider sleeve) so that it’s
+    Twist large press cap onto new ball joint front end (wider sleeve) so that itï¿½s
     flush with metal sleeve. Insert ball joint rear end into wheel carrier bore/rim
     front.<br>
     Arrange spindle with receive sleeve and plate, and align receive sleeve and
@@ -357,16 +358,16 @@ src="swing_arm_ball_joints_procedure_files/image023.jpg"><br>
     end should protrude from press cap end, but not be tightened to press cap.
     Thread to end then loosen 1/2 turn.<br>
     Tighten press nut until press cap and receive sleeve are flush with ball joint
-    metal sleeve ends (24mm deep socket 1/2” / 1/2” ratchet). Double check all
+    metal sleeve ends (24mm deep socket 1/2ï¿½ / 1/2ï¿½ ratchet). Double check all
     seating and alignment.</p>
   <p><img width=512 height=384
 src="swing_arm_ball_joints_procedure_files/image024.jpg"><br>
     Tighten press nut until ball joint is completely inserted and pressed against
-    wheel carrier (press nut will get tight) (24mm deep socket 1/2” / 1/2” ratchet).<br>
+    wheel carrier (press nut will get tight) (24mm deep socket 1/2ï¿½ / 1/2ï¿½ ratchet).<br>
     <br>
     <br>
   </p>
-  <p>Loosen press nut (24mm deep socket 1/2” / 1/2” ratchet), and
+  <p>Loosen press nut (24mm deep socket 1/2ï¿½ / 1/2ï¿½ ratchet), and
     unscrew spindle from press cap (8mm combo wrench). Twist off press cap from
     ball joint.<br>
     <br>
@@ -392,7 +393,7 @@ src="swing_arm_ball_joints_procedure_files/image025.jpg"><br>
 src="swing_arm_ball_joints_procedure_files/image016.jpg"><br>
     Insert integral link long shaft end onto ball joint front end external shaft.<br>
     Align integral link to wheel carrier and mount with integral link bolt (18mm
-    socket 1/2” / 1/2” ratchet). Tighten until snug, then loosen 1/2 turn.<br>
+    socket 1/2ï¿½ / 1/2ï¿½ ratchet). Tighten until snug, then loosen 1/2 turn.<br>
     <br>
     <br>
   </p>
@@ -428,28 +429,28 @@ src="swing_arm_ball_joints_procedure_files/image030.jpg"><br>
     Leverage (pry bar) against axel to press down on swing arm front end and press
     out on integral link to align their mounting positions. Simultaneously, thread in
     mounting bolt.<br>
-    Thread bolt until fully inserted (18mm socket 1/2” / 1/2” ratchet).</p>
+    Thread bolt until fully inserted (18mm socket 1/2ï¿½ / 1/2ï¿½ ratchet).</p>
   <p><img width=512 height=384
 src="swing_arm_ball_joints_procedure_files/image031.jpg"><br>
     Thread on new self-locking nut. Counter hold bolt and tighten nut (18mm combo
-    wrench, 24mm socket 1/2” / 1/2” ratchet). Tighten until snug, then loosen nut 1/2
+    wrench, 24mm socket 1/2ï¿½ / 1/2ï¿½ ratchet). Tighten until snug, then loosen nut 1/2
     turn.</p>
   <p><img width=512 height=384
 src="swing_arm_ball_joints_procedure_files/image032.jpg"><br>
-    Lift wheel carrier to position of “empty weight position” or “normal position”
+    Lift wheel carrier to position of ï¿½empty weight positionï¿½ or ï¿½normal positionï¿½
     as previously measured (tape measure). Utilize lift (jack and towel) to lift up
     on swing arm at its lowest point; found adjacent to wheel carrier inboard side
     at ball joint.<br>
-    Note: If utilizing “normal position”, car will likely lift off jack stand
+    Note: If utilizing ï¿½normal positionï¿½, car will likely lift off jack stand
     (picture).<br>
     <br>
   </p>
   <p>Tighten integral link bolt to 105 Nm (77 ft-lb) (18mm socket
-    1/2” / 1/2” torque wrench).<br>
+    1/2ï¿½ / 1/2ï¿½ torque wrench).<br>
     <br>
   </p>
   <p>Counter hold swing arm bolt and tighten self-locking nut to
-    256 Nm (189 ft-lb) (18mm combo wrench, 24mm socket 1/2” / 1/2” torque wrench).<br>
+    256 Nm (189 ft-lb) (18mm combo wrench, 24mm socket 1/2ï¿½ / 1/2ï¿½ torque wrench).<br>
     <br>
   </p>
   <p>Lower wheel carrier.<br>
@@ -460,7 +461,7 @@ src="swing_arm_ball_joints_procedure_files/image032.jpg"><br>
     and bolt thread and washer (brake cleaner/towel).</p>
   <p><img width=512 height=384
 src="swing_arm_ball_joints_procedure_files/image033.jpg"><br>
-    Mount stabilizer bar link joint at swing arm (16mm combo wrench, 5/8” [~16mm]
+    Mount stabilizer bar link joint at swing arm (16mm combo wrench, 5/8ï¿½ [~16mm]
     combo wrench). Adjust link ball joints and push down on stabilizer bar as
     needed to insert link bolt.<br>
     Note: Washer installs on outside with self-locking nut. Orient washer side with
@@ -470,7 +471,7 @@ src="swing_arm_ball_joints_procedure_files/image033.jpg"><br>
   </p>
   <p>Right side: xenon lights: Clean regulating rod level sensor mounting
     contact surfaces and bolt thread and washer (brake cleaner/towel). Mount level
-    sensor regulating rod (10mm socket 1/4” / 1/4” ratchet, needle nose pliers).<br>
+    sensor regulating rod (10mm socket 1/4ï¿½ / 1/4ï¿½ ratchet, needle nose pliers).<br>
     <br>
     <br>
   </p>
@@ -499,7 +500,7 @@ src="swing_arm_ball_joints_procedure_files/image033.jpg"><br>
     <br>
     <br>
   </p>
-  <p>© Copyright 2022 Beisan Systems LLC</p>
+  <p>ï¿½ Copyright 2022 Beisan Systems LLC</p>
 </div>
 </body>
 </html>
