--- a/procedures/double_vanos_rattle_procedure.htm
+++ b/procedures/double_vanos_rattle_procedure.htm
@@ -1,6 +1,7 @@
 <html>
 <head>
 <meta http-equiv=Content-Type content="text/html; charset=windows-1252">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Beisan Systems - Procedures - Double Vanos Rattle Procedure</title>
 <style>
 <!--
@@ -39,9 +40,9 @@ style='font-size:14.0pt'><br>
   <p><b><span style='font-size:14.0pt'>Introduction</span><br>
     <br>
     </b></p>
-  <p>“Vanos” is BMW’s name for its variable valve timing units.
+  <p>ï¿½Vanosï¿½ is BMWï¿½s name for its variable valve timing units.
     Vanos units take on various shapes and design according to car year and model
-    (engine model). The vanos discussed here is BMW part # 11-36-1-440-142. It’s a
+    (engine model). The vanos discussed here is BMW part # 11-36-1-440-142. Itï¿½s a
     double vanos; meaning both the intake and exhaust valve timing is varied. This
     vanos unit is part of BMW 6-cylinder engines M52TU, M54, and M56. These engines
     were incorporated into a wide range of car models during years 1998-2006. They
@@ -59,7 +60,7 @@ style='font-size:14.0pt'><br>
     found on the helical gears and the vanos piston bearing. Replacing the helical
     gear components is expensive and the gears will wear again and the rattle will
     return. Removing the vanos piston bearing axial play significantly reduces the
-    rattle to the point where it’s barely heard or not heard at all in the
+    rattle to the point where itï¿½s barely heard or not heard at all in the
     passenger compartment. Performance cams like the cams on the US E46 ZHP or
     aftermarket performance (Schrick) cams create stronger camshaft lash forces and
     thus are more susceptible to causing a rattle.<br>
@@ -77,7 +78,7 @@ style='font-size:14.0pt'><br>
     understanding of the BMW variable valve timing system is needed.<br>
     <br>
     Variable valve timing is the modifying of the engine valve opening/closing
-    timing dynamically. BMW’s variable valve timing implements a time shift (phase
+    timing dynamically. BMWï¿½s variable valve timing implements a time shift (phase
     shift) scheme. The camshaft cam is not modified, thus all the characteristics
     of the opening and closing of the valve remain the same. What changes is the
     time when the valve opening/closing occurs relative to the crankshaft timing.
@@ -95,7 +96,7 @@ style='font-size:14.0pt'><br>
   </p>
   <p>[picture]<br>
     The camshaft and camshaft sprocket are not mounted directly to each other. The
-    sprocket has a hole at its middle that’s larger than the camshaft end. Opposing
+    sprocket has a hole at its middle thatï¿½s larger than the camshaft end. Opposing
     slant helical gears are mounted at the sprocket hole and camshaft end. There is
     an independent splined shaft with a cup and helical gears on the inside and
     outside of the cup walls. The splined shaft cup inner helical gears match the
@@ -105,8 +106,8 @@ style='font-size:14.0pt'><br>
     camshaft and sprocket. Inserting and withdrawing the splined shaft axially
     in/out of the camshaft and sprocket requires the rotation of a component due to
     the helical gears. The sprocket rotation is fixed by the timing chain. The
-    splined shaft can’t rotate due to the opposing helical gear slants on its cup
-    inside and outside. Thus it’s the camshaft that rotates when the splined shaft
+    splined shaft canï¿½t rotate due to the opposing helical gear slants on its cup
+    inside and outside. Thus itï¿½s the camshaft that rotates when the splined shaft
     is manipulated axially.<br>
     <br>
   </p>
@@ -169,8 +170,8 @@ style='font-size:14.0pt'><br>
     axially. This causes strong axial movements of the splined shaft. Any axial
     play in the splined shaft vicinity is engaged and can cause a rattle.<br>
     There are two locations of axial play. The helical gears themselves have axial
-    play that’s engaged and rattles and the vanos piston bearing has axial play
-    that’s engaged and rattles.<br>
+    play thatï¿½s engaged and rattles and the vanos piston bearing has axial play
+    thatï¿½s engaged and rattles.<br>
     <br>
     Testing has been performed to assess and attempt to reduce the rattling. The
     vanos piston bearing radial play was modified and the results indicated little
@@ -214,12 +215,12 @@ style='font-size:14.0pt'><br>
     <br>
     Removing the bearing axial play requires modifying or replacing at least one
     bearing component. The thrust bearings are a standard part and are manufactured
-    to tight tolerances. It’s not feasible to modify or replace them. The ring and
+    to tight tolerances. Itï¿½s not feasible to modify or replace them. The ring and
     center washer are non standard parts and are manufactured to loose tolerances.
     The ring height can be reduced or the center washer height can be increased to
     remove the bearing axial play. The ring has been found to have a large height
     variation and the washer has been found to have a smaller height variation. Due
-    to these findings, it’s more effective to replace the ring. A bearing
+    to these findings, itï¿½s more effective to replace the ring. A bearing
     adjustment can be made at installation to address any minor axial fit
     variation.<br>
     <br>
@@ -231,7 +232,7 @@ style='font-size:14.0pt'><br>
     ring is manufactured to the same specification as the original bearing ring but
     with a shorter height and a very tight height tolerance. The other ring
     dimensions are also manufactured to tight tolerances.<br>
-    The bearing ring is a difficult and expensive component to manufacture. It’s
+    The bearing ring is a difficult and expensive component to manufacture. Itï¿½s
     made from a special bearing steel and hardened to a high hardness. All its
     surfaces are ground. This technique allows for machining hard parts to a high
     dimensional tolerance and a polished surface.<br>
@@ -314,17 +315,17 @@ src="double_vanos_rattle_procedure_files/image001.jpg"><br>
     piston.</p>
   <p><img border=0 width=512 height=384
 src="double_vanos_rattle_procedure_files/image002.jpg"><br>
-    4”, or larger, swivel vise (Harbor Freight, 4” at store $45)<br>
+    4ï¿½, or larger, swivel vise (Harbor Freight, 4ï¿½ at store $45)<br>
     <br>
     Note: Vise must be mounted for use.</p>
   <p><img border=0 width=512 height=384
 src="double_vanos_rattle_procedure_files/image003.jpg"><br>
-    1/2” impact wrench (Harbor Freight, <a
+    1/2ï¿½ impact wrench (Harbor Freight, <a
 href="http://www.harborfreight.com/12-electric-impact-wrench-68099.html">http://www.harborfreight.com/12-electric-impact-wrench-68099.html</a> on sale at store $40)</p>
   <p><img border=0 width=512 height=384
 src="double_vanos_rattle_procedure_files/image004.jpg"><br>
-    24mm impact socket 1/2&quot;, T30 torx bit socket 1/4”, 90 degree pick tool, magnet
-    pickup, 1/4” ratchet</p>
+    24mm impact socket 1/2&quot;, T30 torx bit socket 1/4ï¿½, 90 degree pick tool, magnet
+    pickup, 1/4ï¿½ ratchet</p>
   <p><img border=0 width=512 height=384
 src="double_vanos_rattle_procedure_files/image005.jpg"><br>
     Paper towels, brake cleaner, oil spray<br>
@@ -352,7 +353,7 @@ src="double_vanos_rattle_procedure_files/image006.jpg"><br>
   <p><img border=0 width=512 height=384
 src="double_vanos_rattle_procedure_files/image007.jpg"><br>
     Install piston onto engine intake splined shaft with piston mounting bolt; <u>left
-    hand thread</u> (T30 torx bit socket 1/4” / 1/4” ratchet &amp; extension).<br>
+    hand thread</u> (T30 torx bit socket 1/4ï¿½ / 1/4ï¿½ ratchet &amp; extension).<br>
     Lightly tighten.</p>
   <p><img border=0 width=512 height=384
 src="double_vanos_rattle_procedure_files/image008.jpg"><br>
@@ -366,9 +367,9 @@ src="double_vanos_rattle_procedure_files/image008.jpg"><br>
     <br>
   </p>
   <p>Remove piston and piston mounting bolt from intake splined
-    shaft; <u>left hand thread</u> (T30 torx bit socket 1/4” / 1/4” ratchet &amp;
+    shaft; <u>left hand thread</u> (T30 torx bit socket 1/4ï¿½ / 1/4ï¿½ ratchet &amp;
     extension).</p>
-  <p> <img border=0 width=512 height=384
+  <p>ï¿½<img border=0 width=512 height=384
 src="double_vanos_rattle_procedure_files/image009.jpg"><br>
     Attach soft vise jaw liners to vise jaws.<br>
     Open vise jaws as far as necessary to insert piston shaft.</p>
@@ -383,7 +384,7 @@ src="double_vanos_rattle_procedure_files/image010.jpg"><br>
     damage piston.</p>
   <p><img border=0 width=512 height=384
 src="double_vanos_rattle_procedure_files/image011.jpg"><br>
-    Loosen (break seize) piston bolt/cap (24mm socket 1/2” / 1/2” impact wrench).<br>
+    Loosen (break seize) piston bolt/cap (24mm socket 1/2ï¿½ / 1/2ï¿½ impact wrench).<br>
     If available, set impact wrench power to lowest setting.<br>
     Engage impact wrench in reverse for 1 second intervals at a time until bolt/cap
     loosens (seize breaks).<br>
@@ -460,7 +461,7 @@ src="double_vanos_rattle_procedure_files/image021.jpg"><br>
   <p><img border=0 width=512 height=384
 src="double_vanos_rattle_procedure_files/image022.jpg"><br>
     Insert new bearing ring in piston (fingers).<br>
-    Note: New ring is marked “BS” on outer perimeter.<br>
+    Note: New ring is marked ï¿½BSï¿½ on outer perimeter.<br>
     Initially insert ring in piston.<br>
     Insert right and left index fingers into ring. Press fingers against ring inner
     right and left walls and manipulate ring side to side while slightly pressing
@@ -501,7 +502,7 @@ src="double_vanos_rattle_procedure_files/image011.jpg"><br>
     Strongly tighten vise onto piston shaft.<br>
     Note: Vise jaw liners are soft and will not damage piston surfaces.<br>
     <br>
-    Fully tighten piston bearing bolt/cap (24mm impact socket 1/2” / 1/2” torque
+    Fully tighten piston bearing bolt/cap (24mm impact socket 1/2ï¿½ / 1/2ï¿½ torque
     wrench).<br>
     If available, set impact wrench power to lowest setting.<br>
     Engage impact wrench in forward for 1 second interval 3 times to fully tighten
@@ -518,7 +519,7 @@ src="double_vanos_rattle_procedure_files/image011.jpg"><br>
   <p><img border=0 width=512 height=384
 src="double_vanos_rattle_procedure_files/image007.jpg"><br>
     Install piston onto engine intake splined shaft with piston mounting bolt; <u>left
-    hand thread</u> (T30 torx bit socket 1/4” / 1/4” ratchet &amp; extension).<br>
+    hand thread</u> (T30 torx bit socket 1/4ï¿½ / 1/4ï¿½ ratchet &amp; extension).<br>
     Lightly tighten.</p>
   <p><img border=0 width=512 height=384
 src="double_vanos_rattle_procedure_files/image008.jpg"><br>
@@ -544,7 +545,7 @@ src="double_vanos_rattle_procedure_files/image008.jpg"><br>
     <br>
   </p>
   <p>Remove piston and piston mounting bolt from intake splined
-    shaft; <u>left hand thread</u> (T30 torx bit socket 1/4” / 1/4” ratchet &amp;
+    shaft; <u>left hand thread</u> (T30 torx bit socket 1/4ï¿½ / 1/4ï¿½ ratchet &amp;
     extension).</p>
   <p><img border=0 width=512 height=384
 src="double_vanos_rattle_procedure_files/image028.jpg"><br>
@@ -554,7 +555,7 @@ src="double_vanos_rattle_procedure_files/image028.jpg"><br>
     Disassemble piston bearing per above procedure.<br>
     Place sandpaper (~400 grade) on flat table top. Place bearing center washer on
     sandpaper.<br>
-    Slide washer side to side on sandpaper ~6” back and forth while moderately
+    Slide washer side to side on sandpaper ~6ï¿½ back and forth while moderately
     pressing washer on sandpaper. Perform sanding for 10 seconds.<br>
     Rotate washer 90 degrees and repeat sanding process.<br>
     Flip washer to opposite side and repeat above sanding procedure; 10 seconds
@@ -572,7 +573,7 @@ src="double_vanos_rattle_procedure_files/image029.jpg"><br>
     Disassemble piston bearing per above procedure.<br>
     Place sandpaper (~400 grade) on flat table top. Place bearing ring on
     sandpaper.<br>
-    Slide ring side to side on sandpaper ~6” back and forth while moderately
+    Slide ring side to side on sandpaper ~6ï¿½ back and forth while moderately
     pressing ring on sandpaper. Perform sanding for 10 seconds.<br>
     Rotate ring 90 degrees and repeat sanding process.<br>
     Flip ring to opposite side and repeat above sanding procedure; 10 seconds
@@ -596,7 +597,7 @@ src="double_vanos_rattle_procedure_files/image029.jpg"><br>
     <br>
     <br>
   </p>
-<p>© Copyright 2020 Beisan Systems, LLC<br>
+<p>ï¿½ Copyright 2020 Beisan Systems, LLC<br>
     <br>
   </p>
 </div>
