--- a/procedures/e46_cabin_filter_housing_procedure.htm
+++ b/procedures/e46_cabin_filter_housing_procedure.htm
@@ -1,6 +1,7 @@
 <html xmlns="undefined">
 <head>
 <meta http-equiv=Content-Type content="text/html; charset=windows-1252">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Beisan Systems - Procedures - E46 Cabin Filter Housing Procedure</title>
 <style>
 <!--
@@ -39,7 +40,7 @@ src="e46_cabin_filter_housing_procedure_files/image002.jpg"><br>
     Disconnect cables from cabin filter housing cable bracket clips.</p>
   <p><img width=512 height=384
 src="e46_cabin_filter_housing_procedure_files/image003.jpg"><br>
-    Remove cabin filter housing 4 mounting bolts (T30 torx bit socket 3/8” / 3/8”
+    Remove cabin filter housing 4 mounting bolts (T30 torx bit socket 3/8ï¿½ / 3/8ï¿½
     ratchet &amp; extension).</p>
   <p><img width=512 height=384
 src="e46_cabin_filter_housing_procedure_files/image004.jpg"><br>
@@ -51,7 +52,7 @@ src="e46_cabin_filter_housing_procedure_files/image004.jpg"><br>
   <p><img width=512 height=384
 src="e46_cabin_filter_housing_procedure_files/image005.jpg"><br>
     Mount cabin filter housing onto engine bay bulkhead.<br>
-    Install 4 cabin filter housing mounting bolts (T30 torx bit socket 3/8” / 3/8”
+    Install 4 cabin filter housing mounting bolts (T30 torx bit socket 3/8ï¿½ / 3/8ï¿½
     ratchet).<br>
     <br>
   </p>
@@ -71,7 +72,7 @@ src="e46_cabin_filter_housing_procedure_files/image007.jpg"><br>
     <span style='font-size:14.0pt'><br>
     <br>
     </span></p>
-  <p>© Copyright 2022 Beisan Systems, LLC</p>
+  <p>ï¿½ Copyright 2022 Beisan Systems, LLC</p>
 </div>
 </body>
 </html>
