--- a/procedures/e46_m3_fan_procedure.htm
+++ b/procedures/e46_m3_fan_procedure.htm
@@ -1,6 +1,7 @@
 <html>
 <head>
 <meta http-equiv=Content-Type content="text/html; charset=windows-1252">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Beisan Systems - Procedures - E46 M3 Fan Procedure</title>
 <style>
 <!--
@@ -76,7 +77,7 @@ src="e46_m3_fan_procedure_files/image009.jpg"><br>
   <p><img width=512 height=384
 src="e46_m3_fan_procedure_files/image010.jpg"><br>
     Remove fan shroud mounting bolt at top left of fan shroud (T25 torx bit socket
-    1/4&quot; / 1/4” ratchet).<br>
+    1/4&quot; / 1/4ï¿½ ratchet).<br>
     Note: Bolt is longer than other similar bolts to be removed.</p>
   <p><img width=512 height=384
 src="e46_m3_fan_procedure_files/image011.jpg"><br>
@@ -86,7 +87,7 @@ src="e46_m3_fan_procedure_files/image011.jpg"><br>
   <p><img width=512 height=384
 src="e46_m3_fan_procedure_files/image012.jpg"><br>
     Remove fan shroud mounting bolt at top right side of fan shroud (T25 torx bit
-    socket 1/4&quot; / 1/4” ratchet).<br>
+    socket 1/4&quot; / 1/4ï¿½ ratchet).<br>
     <br>
     Raise front of car and place on jack stands (follow appropriate procedure;
     chock both sides of both rear wheels).</p>
@@ -105,7 +106,7 @@ src="e46_m3_fan_procedure_files/image015.jpg"></p>
   <p><img width=512 height=384
 src="e46_m3_fan_procedure_files/image016.jpg"><br>
     Remove fan shroud bottom left and right mounting bolts (T25 torx bit socket
-    1/4&quot; / 1/4” ratchet &amp; extension).<br>
+    1/4&quot; / 1/4ï¿½ ratchet &amp; extension).<br>
     <br>
     Lower car from jack stands (follow appropriate procedure).</p>
   <p><img width=512 height=384
@@ -209,7 +210,7 @@ src="e46_m3_fan_procedure_files/image027.jpg"><br>
   <p><img width=512 height=384
 src="e46_m3_fan_procedure_files/image012.jpg"><br>
     Install fan shroud mounting bolt at top right side of fan shroud (T25 torx bit
-    socket 1/4&quot; / 1/4” ratchet).<br>
+    socket 1/4&quot; / 1/4ï¿½ ratchet).<br>
     Note: Shroud right mounting bolt is short.</p>
   <p><img width=512 height=384
 src="e46_m3_fan_procedure_files/image028.jpg"><br>
@@ -218,7 +219,7 @@ src="e46_m3_fan_procedure_files/image028.jpg"><br>
   <p><img width=512 height=384
 src="e46_m3_fan_procedure_files/image029.jpg"><br>
     Install fan shroud mounting bolt at top left of fan shroud (T25 torx bit socket
-    1/4&quot; / 1/4” ratchet).<br>
+    1/4&quot; / 1/4ï¿½ ratchet).<br>
     Note: Shroud left mounting bolt is long.</p>
   <p><img width=512 height=384
 src="e46_m3_fan_procedure_files/image030.jpg"><br>
@@ -239,7 +240,7 @@ src="e46_m3_fan_procedure_files/image015.jpg"></p>
   <p><img width=512 height=384
 src="e46_m3_fan_procedure_files/image016.jpg"><br>
     Install fan shroud bottom left and right mounting bolts (T25 torx bit socket
-    1/4&quot; / 1/4” ratchet &amp; extension).<br>
+    1/4&quot; / 1/4ï¿½ ratchet &amp; extension).<br>
     <br>
   </p>
   <p>Insert engine compartment shield into front bumper and align
@@ -298,7 +299,7 @@ src="e46_m3_fan_procedure_files/image043.jpg"><br>
     <br>
     <br>
   </p>
-  <p>© Copyright 2022 Beisan Systems, LLC</p>
+  <p>ï¿½ Copyright 2022 Beisan Systems, LLC</p>
 </div>
 </body>
 </html>
