--- a/procedures/front_struts_procedure.htm
+++ b/procedures/front_struts_procedure.htm
@@ -1,6 +1,7 @@
 <html xmlns="undefined">
 <head>
 <meta http-equiv=Content-Type content="text/html; charset=windows-1252">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Beisan Systems - Procedure - Front Struts Procedure</title>
 <style>
 <!--
@@ -35,7 +36,7 @@ p.MsoAcetate, li.MsoAcetate, div.MsoAcetate
     struts/shocks is 70k-120k miles. Sachs says cold weather and bad road
     conditions are the primary contributors to accelerated strut/shock
     deterioration. Sachs BMW struts and shocks are made in Germany. The Sachs parts BMW sells and the ones sold on the open market are identical,
-    except for the part numbers. Sachs provides a lifetime (“defective or worn-out”)
+    except for the part numbers. Sachs provides a lifetime (ï¿½defective or worn-outï¿½)
     warranty on their struts/shocks. This is available through third party vendors,
     but not through BMW.<br>
     <br>
@@ -66,7 +67,7 @@ p.MsoAcetate, li.MsoAcetate, div.MsoAcetate
   </p>
   <p>There is no practical DIY diagnosis for struts/shocks.
     Paying attention to the symptoms is sufficient to characterizing the failure.
-    If one end of the car is presenting with failure symptoms, then it’s likely the
+    If one end of the car is presenting with failure symptoms, then itï¿½s likely the
     other end is not far behind.<br>
     <br>
   </p>
@@ -104,15 +105,15 @@ src="front_struts_procedure_files/image002.jpg"><br>
     Needle nose pliers, large flathead screwdriver<br>
     16mm combo wrench, 18mm combo wrench<br>
     5mm Allen wrench <br>
-    10 mm socket 1/4”, 13mm socket 1/4”, 16mm socket 1/2”, 18mm socket 1/2”<br>
-    1/4” ratchet w/ extension, 3/8” ratchet, 1/2” ratchet, 3/8” torque wrench (24 Nm
-    [17.5 ft-lb] - 110 Nm [81 ft-lb]) w/ 1/2” converter, 1/2” breaker bar (18”)<br>
-    Optional: Long socket extension 1/2” (not shown), for wheel carrier leverage.<br>
+    10 mm socket 1/4ï¿½, 13mm socket 1/4ï¿½, 16mm socket 1/2ï¿½, 18mm socket 1/2ï¿½<br>
+    1/4ï¿½ ratchet w/ extension, 3/8ï¿½ ratchet, 1/2ï¿½ ratchet, 3/8ï¿½ torque wrench (24 Nm
+    [17.5 ft-lb] - 110 Nm [81 ft-lb]) w/ 1/2ï¿½ converter, 1/2ï¿½ breaker bar (18ï¿½)<br>
+    Optional: Long socket extension 1/2ï¿½ (not shown), for wheel carrier leverage.<br>
     <br>
   </p>
-  <p>Note: I utilized my 3/8” torque wrench (17”) w/ 1/2”
-    converter instead of my 1/2” torque wrench (22”) due to the functionally easier
-    to use arm length. A 1/2” torque wrench would also work well.</p>
+  <p>Note: I utilized my 3/8ï¿½ torque wrench (17ï¿½) w/ 1/2ï¿½
+    converter instead of my 1/2ï¿½ torque wrench (22ï¿½) due to the functionally easier
+    to use arm length. A 1/2ï¿½ torque wrench would also work well.</p>
   <p><img width=512 height=384
 src="front_struts_procedure_files/image003.jpg"><br>
     24mm combo wrench, BMW ST ball joint remover (90-88-6-31-2-240) $125/each<br>
@@ -122,17 +123,17 @@ src="front_struts_procedure_files/image004.jpg"><br>
     ~1lb dead blow hammer<br>
     OEM (company name) strut spring compressor #27036 AutoZone free w/ ~$40 deposit<br>
     6mm Allen wrench, wide/full jaw pliers<br>
-    3/4” combo wrench, BMW ST strut nut socket 21mm (90-88-6-31-2-210) $33.20/each<br>
-    3/4” socket 1/2”, 1/2” ratchet (listed above)<br>
+    3/4ï¿½ combo wrench, BMW ST strut nut socket 21mm (90-88-6-31-2-210) $33.20/each<br>
+    3/4ï¿½ socket 1/2ï¿½, 1/2ï¿½ ratchet (listed above)<br>
     <br>
-    Note: 3/4” size is specific to indicated spring compressor<br>
-    Note: BMW ST strut nut socket can be substituted with 13/16” (~21mm) sparkplug
-    socket with hex base, and 13/16” (~21mm) combo wrench.</p>
+    Note: 3/4ï¿½ size is specific to indicated spring compressor<br>
+    Note: BMW ST strut nut socket can be substituted with 13/16ï¿½ (~21mm) sparkplug
+    socket with hex base, and 13/16ï¿½ (~21mm) combo wrench.</p>
   <p><img width=512 height=384
 src="front_struts_procedure_files/image005.jpg"><br>
     Paper towels, glass cleaner, brake cleaner<br>
     Spray lubricant, graphite based grease (Sta-Lube, Synthetic Grease, CRC), towel<br>
-    Stainless steel wire brush, 2 x 2ft small gauge rope, 4’ x 1” mounting tape<br>
+    Stainless steel wire brush, 2 x 2ft small gauge rope, 4ï¿½ x 1ï¿½ mounting tape<br>
     Not shown: floor pad (old quilt), 2 x wheel carrier stands (bucket &amp; 2 wood
     blocks)<br>
     Optional: Paint (to mark spring position on strut)<br>
@@ -149,14 +150,14 @@ src="front_struts_procedure_files/image005.jpg"><br>
   </p>
   <p>The following procedure shows the left side (driver side).
     The right side is the same but with minor noted differences.<br>
-    It’s more effective to perform the left side first since it’s illustrated with
+    Itï¿½s more effective to perform the left side first since itï¿½s illustrated with
     pictures.</p>
   <p><u><span style='font-size:14.0pt'>Removal of spring/strut
     from car</span></u></p>
   <p><img width=512 height=384
 src="front_struts_procedure_files/image006.jpg"><br>
-    Remove Brake caliper carrier to wheel carrier 2 mounting bolts (18mm socket 1/2”
-    / 1/2” breaker bar &amp; ratchet).</p>
+    Remove Brake caliper carrier to wheel carrier 2 mounting bolts (18mm socket 1/2ï¿½
+    / 1/2ï¿½ breaker bar &amp; ratchet).</p>
   <p><img width=512 height=384
 src="front_struts_procedure_files/image007.jpg"><br>
     Remove caliper carrier from wheel carrier. Slightly pry caliper open at brake
@@ -169,7 +170,7 @@ src="front_struts_procedure_files/image008.jpg"><br>
   <p><img width=512 height=384
 src="front_struts_procedure_files/image009.jpg"><br>
     Right side: xenon lights: Disconnect level sensor regulating rod joint. Counter
-    hold inside nut and remove outside nut (needle nose pliers, 10mm socket 1/4” / 1/4”
+    hold inside nut and remove outside nut (needle nose pliers, 10mm socket 1/4ï¿½ / 1/4ï¿½
     ratchet). Remove bolt and rotate regulating rod (link) to be adjacent with control
     arm.<br>
     Check regulating rod ball joints as described below for stabilizer bar link.</p>
@@ -177,7 +178,7 @@ src="front_struts_procedure_files/image009.jpg"><br>
 src="front_struts_procedure_files/image010.jpg"><br>
     Disconnect stabilizer bar link joint at stabilizer bar. First, push aside ball
     joint boot from inside nut (flathead). Counter hold inside nut and remove
-    outside nut (16mm combo wrench, 16mm socket 1/2” / 1/2” ratchet). If tool not
+    outside nut (16mm combo wrench, 16mm socket 1/2ï¿½ / 1/2ï¿½ ratchet). If tool not
     fitting well on inside nut, then repeat boot removal attempt. Inside nut has
     only two flat facets, so outside nut might need to be turned to spin inside nut
     into a tool accessible orientation.<br>
@@ -203,16 +204,16 @@ src="front_struts_procedure_files/image011.jpg"><br>
 src="front_struts_procedure_files/image012.jpg"><br>
     Remove tie-rod bolt from wheel carrier (BMW ball joint remover, 24mm combo
     wrench). Apply lubricant to outer/leverage spindle (graphite based grease).
-    Screw in (clockwise) outer/leverage spindle, leaving ~1/2” of thread. Adjust
+    Screw in (clockwise) outer/leverage spindle, leaving ~1/2ï¿½ of thread. Adjust
     inner/fitting spindle to facilitate good fit between lower wheel carrier shelf and
     tie-rod bolt end. Insert/twist lower tool arm fork completely under tie-rod
     ball joint boot. Place upper tool arm press cup on top of tie-rod bolt end;
     Insert arm as far in as possible. Adjust fitting spindle as necessary. Tighten
     leverage spindle to hold tool in place (24mm combo wrench).<br>
     Tighten leverage spindle to press tie-rod bolt out of wheel carrier shelf (24mm
-    combo wrench). There will be a “big bang” when bolt releases, and tools will
+    combo wrench). There will be a ï¿½big bangï¿½ when bolt releases, and tools will
     drop to ground. Be careful!!<br>
-    Note: It’s helpful to protect ears from shock (ear plugs).<br>
+    Note: Itï¿½s helpful to protect ears from shock (ear plugs).<br>
     <br>
   </p>
   <p>8-cyl: Turn steering wheel to opposite side to facilitate
@@ -225,23 +226,23 @@ src="front_struts_procedure_files/image012.jpg"><br>
   <p><img width=512 height=384
 src="front_struts_procedure_files/image013.jpg"><br>
     Disconnect wheel carrier strut bearing. Counter hold bolt and remove nut (16mm
-    combo wrench, 18mm socket 1/2” / 1/2” ratchet). Remove bolt.<br>
+    combo wrench, 18mm socket 1/2ï¿½ / 1/2ï¿½ ratchet). Remove bolt.<br>
     ABS/speed &amp; brake pad sensor bracket will be removed.</p>
   <p><img width=512 height=384
 src="front_struts_procedure_files/image014.jpg"><br>
-    Protect fender middle to back rim. Cover rim inside, bottom lip, and outside (2’
+    Protect fender middle to back rim. Cover rim inside, bottom lip, and outside (2ï¿½
     mounting tape).</p>
   <p><img width=512 height=384
 src="front_struts_procedure_files/image015.jpg"><br>
     Remove strut plastic center cap (flathead) at strut tower (under hood).<br>
-    Remove strut mount 3 nuts at strut tower (13mm socket 1/4” / 1/4” ratchet &amp;
+    Remove strut mount 3 nuts at strut tower (13mm socket 1/4ï¿½ / 1/4ï¿½ ratchet &amp;
     socket extension).<br>
     Remove filter box spring clip at strut tower and partially lift filter box assy
     to allow easier removal of rear nut.</p>
   <p><img width=512 height=384
 src="front_struts_procedure_files/image016.jpg"><br>
     Optional: Insert bar into wheel hub center for foot leverage (long socket
-    extension 1/2”).<br>
+    extension 1/2ï¿½).<br>
     Note: Verify ABS/speed and brake pad sensor cables have enough slack to allow
     for wheel carrier lowering in next steps.<br>
     Position tie-rod to side of wheel carrier.<br>
@@ -257,7 +258,7 @@ src="front_struts_procedure_files/image016.jpg"><br>
     become difficult to extract.<br>
     <br>
   </p>
-  <p>Press down again with foot, tilt strut assy top to rear ~10°,
+  <p>Press down again with foot, tilt strut assy top to rear ~10ï¿½,
     lower strut assy, and slowly lean strut assy top out of wheel well.<br>
     Note: Allow strut assy top to lower away from fender rim before pulling out of
     wheel well. Otherwise strut assy will hook onto fender inner rim and become
@@ -321,7 +322,7 @@ src="front_struts_procedure_files/image022.jpg"><br>
     <br>
     <br>
   </p>
-  <p>It’s now important to take close note of the positioning of
+  <p>Itï¿½s now important to take close note of the positioning of
     the spring in the strut assy. Understanding this will be essential for proper
     reassembly. The spring lower coil is molded to fit the lower seat (strut perch)
     egg shape and is positioned on the lower seat to fit that outline. The position
@@ -333,15 +334,15 @@ src="front_struts_procedure_files/image022.jpg"><br>
     nose tip to provide an orientation reference for reinstallation (paint).</p>
   <p><img width=512 height=384
 src="front_struts_procedure_files/image023.jpg"><br>
-    Note: It’s best to have strut horizontal when performing press process (floor
+    Note: Itï¿½s best to have strut horizontal when performing press process (floor
     pad).<br>
-    Tighten spindles (3/4” socket 1/2” / 1/2” ratchet), rotating often between
+    Tighten spindles (3/4ï¿½ socket 1/2ï¿½ / 1/2ï¿½ ratchet), rotating often between
     spindles. Maintaining proportional spindle clasp to clasp lengths is essential
     to keeping a spring press from sliding. A spring press sliding out of position
     will cause significant complications. Rotate often and be careful not to jar spring
     presses.<br>
     Spring press with spindle head at upper spring seat will need open face tool on
-    last 1/3 of press process due to spindle head proximity to seat (3/4” combo
+    last 1/3 of press process due to spindle head proximity to seat (3/4ï¿½ combo
     wrench).<br>
     Spring coils need to be pressed until almost touching. Press process is
     complete when spring has some play between upper and lower seats.</p>
@@ -349,11 +350,11 @@ src="front_struts_procedure_files/image023.jpg"><br>
 src="front_struts_procedure_files/image024.jpg"><br>
     Counter hold strut piston rod and unscrew strut mount nut to break nut seize
     (6mm Allen wrench / pliers [to extend and leverage Allen wrench], BMW 21mm
-    socket / 1/2” ratchet).<a name="OLE_LINK2"></a><a name="OLE_LINK1"><br>
+    socket / 1/2ï¿½ ratchet).<a name="OLE_LINK2"></a><a name="OLE_LINK1"><br>
     Note: Above step needs effort and leverage. I performed this with strut
     standing on end (floor pad).</a><br>
     Counter hold strut piston rod and unscrew strut mount nut to remove nut (6mm
-    Allen wrench / pliers, BMW 21mm socket / 1/2” ratchet).<br>
+    Allen wrench / pliers, BMW 21mm socket / 1/2ï¿½ ratchet).<br>
     Note: Allen wrench will need to be repositioned 1/2 rotation for every 1/2 turn.<br>
     <br>
     <br>
@@ -370,7 +371,7 @@ src="front_struts_procedure_files/image025.jpg"><br>
     With new strut standing on end (floor pad), assemble strut assy.<br>
     Place rubber boot with wider end down onto strut piston rod.<br>
     Place bump stop with tapered end down onto strut piston rod. Insert bump stop
-    into rubber boot and set into first accordion seat.  Press bump stop down onto
+    into rubber boot and set into first accordion seat.ï¿½ Press bump stop down onto
     strut piston rod until all rod threads are transparent.<br>
     Place spring with small coil end down onto lower spring seat. Rotate spring to
     perfectly fit seat outline.<br>
@@ -385,24 +386,24 @@ src="front_struts_procedure_files/image025.jpg"><br>
     <br>
   </p>
   <p>Counter hold strut piston rod and tighten strut mount nut (6mm
-    Allen wrench /pliers, BMW 21mm socket / 1/2” ratchet).<br>
+    Allen wrench /pliers, BMW 21mm socket / 1/2ï¿½ ratchet).<br>
     Note: Allen wrench will need to be repositioned 1/2 rotation for every 1/2 turn.<br>
-    Fully tighten, 64 Nm (47 ft-lb) (6mm Allen wrench / pliers, BMW 21mm socket / 3/8”
-    torque wrench w/ 1/2” converter).<br>
+    Fully tighten, 64 Nm (47 ft-lb) (6mm Allen wrench / pliers, BMW 21mm socket / 3/8ï¿½
+    torque wrench w/ 1/2ï¿½ converter).<br>
     Note: Above step needs effort and leverage. I performed this with strut
     standing on end (floor pad).</p>
   <p><img width=512 height=384
 src="front_struts_procedure_files/image026.jpg"><br>
-    Note: It’s important to have strut standing on end when initially uncompressing
+    Note: Itï¿½s important to have strut standing on end when initially uncompressing
     spring presses to insure proper positioning of components (floor pad).<br>
-    Unscrew spring presses, rotating often between spindles (3/4” socket 1/2” / 1/2”
-    ratchet | 3/4” combo wrench). Maintaining proportional spindle clasp to clasp
+    Unscrew spring presses, rotating often between spindles (3/4ï¿½ socket 1/2ï¿½ / 1/2ï¿½
+    ratchet | 3/4ï¿½ combo wrench). Maintaining proportional spindle clasp to clasp
     lengths is essential to keeping a spring press from sliding. Be careful not to jar
     spring presses.<br>
     Watch component positioning and adjust as needed (dead blow hammer).<br>
     <br>
   </p>
-  <p>Once spring has seated well, it’s best to complete uncompressing
+  <p>Once spring has seated well, itï¿½s best to complete uncompressing
     process while strut is horizontal (floor pad). Rotate often and be careful not
     to jar spring presses. Watch component positioning and adjust as needed (dead
     blow hammer).<br>
@@ -444,7 +445,7 @@ src="front_struts_procedure_files/image027.jpg"><br>
   <p>Insert strut assy top into wheel well. Position tie-rod to
     side of wheel carrier.<br>
     Press down on wheel hub with foot while holding onto spring coils with hands. <br>
-    Tilt strut assy top to rear, ~10°, and slowly lean strut assy top into wheel
+    Tilt strut assy top to rear, ~10ï¿½, and slowly lean strut assy top into wheel
     well.<br>
     Note: Do not use heavy force. If strut assy is not clearing rim, stop, and
     reconsider arms positioning at wheel carrier.</p>
@@ -456,7 +457,7 @@ src="front_struts_procedure_files/image027.jpg"><br>
   <p>Place one hand in wheel well and push up on a spring coil.
     Rotate strut mount from top (under hood) with second hand to align properly; reference
     key peg. Insert bolts into their respective strut tower holes and screw on new
-    self-locking nuts (hand). Fully tighten, 24 Nm (17.5 ft-lb) (13mm socket 1/4” / 1/4”
+    self-locking nuts (hand). Fully tighten, 24 Nm (17.5 ft-lb) (13mm socket 1/4ï¿½ / 1/4ï¿½
     ratchet &amp; socket extension).<br>
     Partially lift filter box assy to allow easier installation of rear nut.<br>
     Reinstall filter box spring clip at strut tower.<br>
@@ -469,9 +470,9 @@ src="front_struts_procedure_files/image028.jpg"><br>
     Right side: When oriented properly, wires will show from car inboard side.<br>
     Insert wheel carrier bearing mounting bolt from front end of wheel carrier.
     Screw bolt in as needed to fully insert. Screw on new self-locking nut. Counter
-    hold bolt and tighten nut (16mm combo wrench, 18mm socket 1/2” / 1/2” ratchet).
-    Fully tighten, 81 Nm (59 ft-lb) (16mm combo wrench, 18mm socket 1/2” / 3/8”
-    torque wrench &amp; 1/2” converter).</p>
+    hold bolt and tighten nut (16mm combo wrench, 18mm socket 1/2ï¿½ / 1/2ï¿½ ratchet).
+    Fully tighten, 81 Nm (59 ft-lb) (16mm combo wrench, 18mm socket 1/2ï¿½ / 3/8ï¿½
+    torque wrench &amp; 1/2ï¿½ converter).</p>
   <p><img width=512 height=384
 src="front_struts_procedure_files/image029.jpg"><br>
     Insert outer tie-rod bolt into wheel carrier mounting hole. Place washer on
@@ -484,20 +485,20 @@ src="front_struts_procedure_files/image030.jpg"><br>
     Insert stabilizer bar link bolt into stabilizer bar mounting hole. Adjust
     stabilizer bar and link to facilitate bolt insertion. Screw on new self-locking
     nut. Counter hold inside nut and tighten outside nut (16mm combo wrench, 16mm
-    socket 1/2” / 1/2” ratchet). Fully tighten, 65 Nm (48 ft-lb) (16mm combo
-    wrench, 16mm socket 1/2” / 3/8” torque wrench &amp; 1/2” converter).<br>
+    socket 1/2ï¿½ / 1/2ï¿½ ratchet). Fully tighten, 65 Nm (48 ft-lb) (16mm combo
+    wrench, 16mm socket 1/2ï¿½ / 3/8ï¿½ torque wrench &amp; 1/2ï¿½ converter).<br>
     <br>
     <br>
   </p>
   <p>Right side: xenon lights: Insert level sensor regulating rod
     bolt into level sensor mounting hole. Screw on self-locking nut. Counter hold inside
-    nut and tighten outside nut (needle nose pliers, 10mm socket 1/4” / 1/4”
+    nut and tighten outside nut (needle nose pliers, 10mm socket 1/4ï¿½ / 1/4ï¿½
     ratchet).</p>
   <p><img width=512 height=384
 src="front_struts_procedure_files/image031.jpg"><br>
     Untie brake caliper carrier. Install caliper carrier on wheel carrier with
-    mounting bolts. Fully tighten bolts, 110 Nm (81 Ft-lb) (18mm socket 1/2” / 3/8”
-    torque wrench &amp; 1/2” converter).<br>
+    mounting bolts. Fully tighten bolts, 110 Nm (81 Ft-lb) (18mm socket 1/2ï¿½ / 3/8ï¿½
+    torque wrench &amp; 1/2ï¿½ converter).<br>
     <br>
     <br>
   </p>
@@ -526,7 +527,7 @@ src="front_struts_procedure_files/image031.jpg"><br>
     <br>
     <br>
   </p>
-  <p>© Copyright 2022 Beisan Systems LLC</p>
+  <p>ï¿½ Copyright 2022 Beisan Systems LLC</p>
 </div>
 </body>
 </html>
