--- a/procedures/s62_fan_procedure.htm
+++ b/procedures/s62_fan_procedure.htm
@@ -2,6 +2,7 @@
 
 <head>
 <meta http-equiv=Content-Type content="text/html; charset=windows-1252">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name=Generator content="Microsoft Word 14 (filtered)">
 <title>Beisan Systems - Procedures - S62 Fan Procedure</title>
 <style>
@@ -248,7 +249,7 @@ Install rubber seal between fan shroud top and car frame.</p>
 src="s62_fan_procedure_files/image022.jpg"><br>
 Install expansion tank at mount position on fan shroud.</p>
 
-<p class=MsoNormal> </p>
+<p class=MsoNormal>ï¿½</p>
 
 <p class=MsoNormal><img width=512 height=384
 src="s62_fan_procedure_files/image023.jpg"></p>
@@ -301,7 +302,7 @@ fan clutch nut.<br>
 <br>
 </p>
 
-<p class=MsoNormal>© Copyright 2022 Beisan Systems, LLC</p>
+<p class=MsoNormal>ï¿½ Copyright 2022 Beisan Systems, LLC</p>
 
 </div>
 
