--- a/procedures/vanos_single_procedure.htm
+++ b/procedures/vanos_single_procedure.htm
@@ -1,6 +1,7 @@
 <html>
 <head>
 <meta http-equiv=Content-Type content="text/html; charset=windows-1252">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Beisan Systems - Procedures - Single Vanos Procedure</title>
 <style>
 <!--
@@ -1103,7 +1104,7 @@ href="http://www.beisansystems.com/procedures/e39_fan_procedure.htm">E39 fan
     <br>
     <br>
   </p>
-  <p>© Copyright 2022 Beisan Systems, LLC</p>
+  <p>ï¿½ Copyright 2022 Beisan Systems, LLC</p>
 </div>
 </body>
 </html>
